Translation update for version 1.32.0

--- a/packages/core/i18n/nls.cs.json
+++ b/packages/core/i18n/nls.cs.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Procházet"
       },
-      "hideViewContainer": "Skrýt",
       "highlightModifiedTabs": "Řídí, zda se na upravených (špinavých) kartách editoru vykreslí horní rámeček, nebo ne.",
       "installedLanguages": "Nainstalované jazyky",
       "keybindingStatus": "{0} byl stisknut, čeká se na další klávesy",
@@ -50,8 +49,6 @@
       "quitMessage": "Neuložené změny se neuloží.",
       "quitTitle": "Jste si jistý, že chcete skončit?",
       "resetWorkbenchLayout": "Obnovení rozložení pracovního stolu",
-      "sashDelay": "Řídí zpoždění zpětné vazby při najetí na plochu v milisekundách mezi jednotlivými zobrazeními/editory.",
-      "sashSize": "Ovládá velikost oblasti zpětné vazby v pixelech v oblasti přetahování mezi zobrazeními/editory. V případě potřeby ji nastavte na větší hodnotu.",
       "searchbox": {
         "close": "Zavřít (únik)",
         "next": "Další (dolů)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "pokyny"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Používá experimentální algoritmus diffing.",
+      "diffEditor.diffAlgorithm.smart": "Používá výchozí algoritmus porovnávání.",
       "diffEditor.maxFileSize": "Maximální velikost souboru v MB, pro kterou se vypočítávají rozdíly. Použijte hodnotu 0 pro žádný limit.",
+      "diffEditor.renderMarginRevertIcon": "Pokud je tato funkce povolena, zobrazuje editor rozdílů na okraji glyfů šipky pro vrácení změn.",
       "editor.accessibilityPageSize": "Řídí počet řádků v editoru, které může čtečka obrazovky přečíst najednou. Při detekci čtečky obrazovky automaticky nastavíme výchozí hodnotu na 500. Upozornění: Pro čísla větší než výchozí to má vliv na výkon.",
-      "editor.autoClosingDelete": "Řídí, zda má editor při mazání odstranit sousední uzavírací uvozovky nebo závorky.",
-      "editor.autoClosingDelete1": "Odstraňte sousední uzavírací uvozovky nebo závorky pouze v případě, že byly vloženy automaticky.",
       "editor.bracketPairColorization.enabled": "Ovládá, zda je obarvení dvojice závorek povoleno, nebo ne. Pro přepsání barev zvýraznění závorek použijte 'workbench.colorCustomizations'.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Řídí, zda má každý typ závorky svůj vlastní nezávislý fond barev.",
+      "editor.codeActionWidget.showHeaders": "Povolení/zakázání zobrazování záhlaví skupin v nabídce akcí kódu.",
       "editor.codeLensFontSize": "Ovládá velikost písma v pixelech pro CodeLens. Při nastavení na `0` se použije 90 % hodnoty `#editor.fontSize#`.",
-      "editor.find.autoFindInSelection0": "Nikdy automaticky nezapínat funkci Najít ve výběru (výchozí nastavení).",
-      "editor.find.autoFindInSelection1": "Vždy automaticky zapněte funkci Najít ve výběru.",
+      "editor.dropIntoEditor.enabled": "Ovládá, zda můžete soubor přetáhnout do textového editoru podržením klávesy `shift` (namísto otevření souboru v editoru).",
+      "editor.experimental.pasteActions.enabled": "Povolení/zakázání spouštění úprav z rozšíření při vkládání.",
       "editor.find.seedSearchStringFromSelection0": "Nikdy nezadávejte vyhledávací řetězec z výběru editoru.",
       "editor.find.seedSearchStringFromSelection1": "Hledaný řetězec se vždy vytvoří z výběru editoru, včetně slova na pozici kurzoru.",
       "editor.find.seedSearchStringFromSelection2": "Z výběru v editoru vybíráte pouze vyhledávací řetězec.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Nápovědy pro vložení jsou zakázány",
       "editor.inlayHints.fontFamily": "Řídí rodinu písma vložených nápověd v editoru. Je-li nastaveno na prázdnou hodnotu, použije se `#editor.fontFamily#`.",
       "editor.inlayHints.fontSize": "Ovládá velikost písma vložených nápověd v editoru. Pokud je nakonfigurovaná hodnota menší než `5` nebo větší než velikost písma editoru, použije se výchozí hodnota 90 % z `#editor.fontSize#`.",
+      "editor.inlayHints.padding": "Povolí v editoru vkládání výplně kolem náznaků vložky.",
       "editor.inlineSuggest.enabled": "Ovládá, zda se mají v editoru automaticky zobrazovat návrhy na řádkování.",
       "editor.language.colorizedBracketPairs": "Definuje dvojice závorek, které jsou obarveny podle úrovně vnoření, pokud je obarvení dvojic závorek povoleno.",
       "editor.lineHeight": "Ovládá výšku čáry.\n - Chcete-li automaticky vypočítat výšku řádku z velikosti písma, použijte hodnotu 0.\n - Hodnoty mezi 0 a 8 se použijí jako násobitel s velikostí písma.\n - Hodnoty větší nebo rovné 8 budou použity jako efektivní hodnoty.",
+      "editor.minimap.autohide": "Ovládá, zda se má minimapa automaticky skrýt.",
+      "editor.multiCursorModifier": "Modifikátor, který se použije pro přidání více kurzorů myši. Gesta myši Přejít na definici a Otevřít odkaz se přizpůsobí tak, aby nebyla v konfliktu s modifikátorem [více kurzorů](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Ovládá, zda se mají při psaní automaticky zobrazovat návrhy. To lze ovládat při psaní komentářů, řetězců a dalšího kódu. Rychlé návrhy lze nakonfigurovat tak, aby se zobrazovaly jako text ducha nebo s widgetem návrhu. Mějte také na paměti nastavení '#editor.suggestOnTriggerCharacters#', které řídí, zda se návrhy spouštějí pomocí speciálních znaků.",
       "editor.quickSuggestions0": "Rychlé návrhy se zobrazují uvnitř widgetu pro navrhování",
       "editor.quickSuggestions1": "Rychlé návrhy se zobrazují jako text duchů",
       "editor.quickSuggestions2": "Rychlé návrhy jsou zakázány",
-      "editor.renderLineHighlightOnlyWhenFocus": "Řídí, zda má editor vykreslovat zvýraznění aktuálního řádku pouze tehdy, když je editor zaměřen.",
-      "editor.renderWhitespace3": "Vykresluje pouze koncové bílé znaky.",
       "editor.scrollbar.horizontal": "Ovládá viditelnost vodorovného posuvníku.",
       "editor.scrollbar.horizontal0": "Vodorovný posuvník se zobrazí pouze v případě potřeby.",
       "editor.scrollbar.horizontal1": "Vodorovný posuvník bude vždy viditelný.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "Svislý posuvník bude vždy viditelný.",
       "editor.scrollbar.vertical2": "Svislý posuvník bude vždy skrytý.",
       "editor.scrollbar.verticalScrollbarSize": "Šířka svislého posuvníku.",
-      "editor.stickyTabStops": "Emulovat chování znaků tabulátoru při použití mezer pro odsazení. Výběr se bude držet zarážek tabulátoru.",
-      "editor.suggest.localityBonus": "Řídí, zda se při řazení upřednostňují slova, která se zobrazují v blízkosti kurzoru.",
+      "editor.showFoldingControls1": "Nikdy nezobrazujte skládací ovládací prvky a zmenšujte velikost žlabu.",
+      "editor.stickyScroll.enabled": "Zobrazí vnořené aktuální obory během posouvání v horní části editoru.",
+      "editor.stickyScroll.maxLineCount": "Definuje maximální počet lepicích řádků, které se mají zobrazit.",
+      "editor.suggest.matchOnWordStartOnly": "Je-li zapnuto filtrování IntelliSense, vyžaduje, aby první znak odpovídal začátku slova, např. `c` u `Console` nebo `WebContext`, ale _ne_ u `description`. Když je funkce IntelliSense vypnutá, zobrazí více výsledků, ale stále je třídí podle kvality shody.",
       "editor.suggest.preview": "Ovládá, zda se má v editoru zobrazit náhled výsledku návrhu.",
       "editor.suggest.showDeprecated": "Pokud je funkce IntelliSense zapnutá, zobrazuje `deprecated` návrhy.",
       "editor.unicodeHighlight.allowedCharacters": "Definuje povolené znaky, které nejsou zvýrazněny.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Řídí, zda mají být znaky v řetězcích také zvýrazněny pomocí unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Řídí, zda se zvýrazní znaky, které mají pouze rezervní místo nebo nemají žádnou šířku.",
       "editor.unicodeHighlight.nonBasicASCII": "Řídí, zda se zvýrazní všechny nezákladní znaky ASCII. Za základní ASCII se považují pouze znaky mezi U+0020 a U+007E, tabulátor, řádkový posuv a carriage-return.",
-      "editor.wordBasedSuggestionsMode": "Řídí, z jakých dokumentů se vypočítávají doplnění na základě slov.",
       "files.autoSave": "Ovládá [automatické ukládání](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) editorů, které mají neuložené změny.",
       "files.autoSave.afterDelay": "Editor se změnami se automaticky uloží po uplynutí nastavené doby `#files.autoSaveDelay#`.",
       "files.autoSave.off": "Editor se změnami se nikdy automaticky neuloží.",
