--- a/packages/core/i18n/nls.de.json
+++ b/packages/core/i18n/nls.de.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Durchsuchen"
       },
-      "hideViewContainer": "Ausblenden",
       "highlightModifiedTabs": "Steuert, ob ein oberer Rand auf modifizierten (schmutzigen) Editor-Tabs gezeichnet wird oder nicht.",
       "installedLanguages": "Installierte Sprachen",
       "keybindingStatus": "{0} wurde gedrückt und wartet auf weitere Tasten",
@@ -50,8 +49,6 @@
       "quitMessage": "Alle nicht gespeicherten Änderungen werden nicht gespeichert.",
       "quitTitle": "Sind Sie sicher, dass Sie aufhören wollen?",
       "resetWorkbenchLayout": "Workbench-Layout zurücksetzen",
-      "sashDelay": "Steuert die Verzögerung des Schwebezustands in Millisekunden des Ziehbereichs zwischen den Ansichten/Editoren.",
-      "sashSize": "Steuert die Größe des Feedback-Bereichs in Pixeln des Ziehbereichs zwischen den Ansichten/Editoren. Setzen Sie ihn bei Bedarf auf einen größeren Wert.",
       "searchbox": {
         "close": "Schließen (Escape)",
         "next": "Nächste (Unten)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "Anweisungen"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Verwendet einen experimentellen Diffing-Algorithmus.",
+      "diffEditor.diffAlgorithm.smart": "Verwendet den Standard-Diffing-Algorithmus.",
       "diffEditor.maxFileSize": "Maximale Dateigröße in MB, für die Diffs berechnet werden sollen. Verwenden Sie 0 für keine Begrenzung.",
+      "diffEditor.renderMarginRevertIcon": "Wenn diese Funktion aktiviert ist, zeigt der Diff-Editor Pfeile am Glyphenrand an, um Änderungen rückgängig zu machen.",
       "editor.accessibilityPageSize": "Steuert die Anzahl der Zeilen im Editor, die von einem Screenreader auf einmal vorgelesen werden können. Wenn wir einen Screenreader erkennen, setzen wir automatisch den Standardwert auf 500. Achtung: Dies hat Auswirkungen auf die Leistung, wenn die Zahl größer als der Standardwert ist.",
-      "editor.autoClosingDelete": "Steuert, ob der Editor beim Löschen angrenzende schließende Anführungszeichen oder Klammern entfernen soll.",
-      "editor.autoClosingDelete1": "Entfernen Sie angrenzende schließende Anführungszeichen oder Klammern nur, wenn sie automatisch eingefügt wurden.",
       "editor.bracketPairColorization.enabled": "Steuert, ob die Einfärbung von Klammerpaaren aktiviert ist oder nicht. Verwenden Sie 'workbench.colorCustomizations', um die Farben der Klammerhervorhebung zu überschreiben.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Steuert, ob jeder Klammertyp seinen eigenen unabhängigen Farbpool hat.",
+      "editor.codeActionWidget.showHeaders": "Aktivieren/deaktivieren Sie die Anzeige von Gruppenkopfzeilen im Code-Aktionsmenü.",
       "editor.codeLensFontSize": "Steuert die Schriftgröße in Pixeln für CodeLens. Bei Einstellung `0` werden 90% von `#editor.fontSize#` verwendet.",
-      "editor.find.autoFindInSelection0": "Niemals die automatische Suche in der Auswahl aktivieren (Standard).",
-      "editor.find.autoFindInSelection1": "Schalten Sie \"In Auswahl suchen\" immer automatisch ein.",
+      "editor.dropIntoEditor.enabled": "Steuert, ob Sie eine Datei durch Ziehen und Ablegen in einen Texteditor ziehen können, indem Sie die \"Umschalttaste\" gedrückt halten (anstatt die Datei in einem Editor zu öffnen).",
+      "editor.experimental.pasteActions.enabled": "Aktivieren/deaktivieren Sie laufende Bearbeitungen von Erweiterungen beim Einfügen.",
       "editor.find.seedSearchStringFromSelection0": "Niemals einen Suchbegriff aus der Editorauswahl setzen.",
       "editor.find.seedSearchStringFromSelection1": "Der Suchstring wird immer aus der Editorauswahl gesetzt, einschließlich des Wortes an der Cursorposition.",
       "editor.find.seedSearchStringFromSelection2": "Nur Suchstring aus der Editorauswahl setzen.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Inlay-Hinweise sind deaktiviert",
       "editor.inlayHints.fontFamily": "Steuert die Schriftfamilie der Inlay-Hinweise im Editor. Wenn leer, wird die `#editor.fontFamily#` verwendet.",
       "editor.inlayHints.fontSize": "Steuert die Schriftgröße von Inlay-Hinweisen im Editor. Eine Vorgabe von 90% von `#editor.fontSize#` wird verwendet, wenn der konfigurierte Wert kleiner als `5` oder größer als die Schriftgröße des Editors ist.",
+      "editor.inlayHints.padding": "Aktiviert das Padding um die Inlay-Hinweise im Editor.",
       "editor.inlineSuggest.enabled": "Legt fest, ob automatisch Inline-Vorschläge im Editor angezeigt werden sollen.",
       "editor.language.colorizedBracketPairs": "Definiert die Klammerpaare, die nach ihrer Verschachtelungsebene eingefärbt werden, wenn die Einfärbung von Klammerpaaren aktiviert ist.",
       "editor.lineHeight": "Steuert die Zeilenhöhe.\n - Verwenden Sie 0, um die Zeilenhöhe automatisch anhand der Schriftgröße zu berechnen.\n - Werte zwischen 0 und 8 werden als Multiplikator mit der Schriftgröße verwendet.\n - Werte, die größer oder gleich 8 sind, werden als effektive Werte verwendet.",
+      "editor.minimap.autohide": "Steuert, ob die Minimap automatisch ausgeblendet wird.",
+      "editor.multiCursorModifier": "Der Modifikator, der verwendet wird, um mehrere Cursor mit der Maus hinzuzufügen. Die Mausgesten \"Gehe zu Definition\" und \"Link öffnen\" werden so angepasst, dass sie nicht mit dem [Multicursor-Modifikator](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier) in Konflikt geraten.",
+      "editor.quickSuggestions": "Legt fest, ob während der Eingabe automatisch Vorschläge angezeigt werden sollen. Dies kann für die Eingabe von Kommentaren, Strings und anderem Code gesteuert werden. Schnellvorschläge können so konfiguriert werden, dass sie als Ghosttext oder mit dem Suggest-Widget angezeigt werden. Beachten Sie auch die '#editor.suggestOnTriggerCharacters#'-Einstellung, die steuert, ob Vorschläge durch Sonderzeichen ausgelöst werden.",
       "editor.quickSuggestions0": "Schnellvorschläge werden innerhalb des Vorschlags-Widgets angezeigt",
       "editor.quickSuggestions1": "Schnellvorschläge werden als Geistertext angezeigt",
       "editor.quickSuggestions2": "Schnellvorschläge sind deaktiviert",
-      "editor.renderLineHighlightOnlyWhenFocus": "Steuert, ob der Editor die aktuelle Zeile nur dann hervorheben soll, wenn der Editor fokussiert ist.",
-      "editor.renderWhitespace3": "Nur nachgestellte Leerzeichen werden wiedergegeben.",
       "editor.scrollbar.horizontal": "Steuert die Sichtbarkeit der horizontalen Bildlaufleiste.",
       "editor.scrollbar.horizontal0": "Die horizontale Bildlaufleiste ist nur sichtbar, wenn dies erforderlich ist.",
       "editor.scrollbar.horizontal1": "Die horizontale Bildlaufleiste wird immer sichtbar sein.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "Die vertikale Bildlaufleiste wird immer sichtbar sein.",
       "editor.scrollbar.vertical2": "Die vertikale Bildlaufleiste wird immer ausgeblendet.",
       "editor.scrollbar.verticalScrollbarSize": "Die Breite der vertikalen Bildlaufleiste.",
-      "editor.stickyTabStops": "Emulieren Sie das Auswahlverhalten von Tabulatorzeichen, wenn Sie Leerzeichen für die Einrückung verwenden. Die Auswahl bleibt an den Tabstopps hängen.",
-      "editor.suggest.localityBonus": "Legt fest, ob bei der Sortierung Wörter bevorzugt werden, die sich in der Nähe des Cursors befinden.",
+      "editor.showFoldingControls1": "Zeigen Sie niemals die Klappsteuerung und verkleinern Sie die Rinne.",
+      "editor.stickyScroll.enabled": "Zeigt die verschachtelten aktuellen Bereiche während des Scrollens am oberen Rand des Editors an.",
+      "editor.stickyScroll.maxLineCount": "Legt die maximale Anzahl der anzuzeigenden Sticky Lines fest.",
+      "editor.suggest.matchOnWordStartOnly": "Wenn die IntelliSense-Filterung aktiviert ist, muss das erste Zeichen am Wortanfang übereinstimmen, z. B. \"c\" bei \"Konsole\" oder \"Webkontext\", aber _nicht_ bei \"Beschreibung\". Wenn IntelliSense deaktiviert ist, werden mehr Ergebnisse angezeigt, aber immer noch nach der Qualität der Übereinstimmung sortiert.",
       "editor.suggest.preview": "Steuert, ob das Ergebnis des Vorschlags im Editor angezeigt werden soll.",
       "editor.suggest.showDeprecated": "Wenn aktiviert, zeigt IntelliSense \"veraltete\" Vorschläge an.",
       "editor.unicodeHighlight.allowedCharacters": "Definiert die erlaubten Zeichen, die nicht hervorgehoben werden sollen.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Steuert, ob Zeichen in Zeichenketten auch mit Unicode-Hervorhebung versehen werden sollen.",
       "editor.unicodeHighlight.invisibleCharacters": "Legt fest, ob Zeichen, die nur einen Leerraum oder gar keine Breite haben, hervorgehoben werden.",
       "editor.unicodeHighlight.nonBasicASCII": "Legt fest, ob alle nichtbasischen ASCII-Zeichen hervorgehoben werden. Nur Zeichen zwischen U+0020 und U+007E, Tabulator, Zeilenvorschub und Carriage-Return gelten als Basis-ASCII.",
-      "editor.wordBasedSuggestionsMode": "Steuert, aus welchen Dokumenten die wortbasierten Vervollständigungen berechnet werden.",
       "files.autoSave": "Steuert das [automatische Speichern](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) von Editoren, die ungespeicherte Änderungen haben.",
       "files.autoSave.afterDelay": "Ein Editor mit Änderungen wird automatisch nach der konfigurierten `#files.autoSaveDelay#` gespeichert.",
       "files.autoSave.off": "Ein Editor mit Änderungen wird nie automatisch gespeichert.",
