--- a/packages/core/i18n/nls.fr.json
+++ b/packages/core/i18n/nls.fr.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Parcourir"
       },
-      "hideViewContainer": "Cacher",
       "highlightModifiedTabs": "Contrôle si une bordure supérieure est dessinée sur les onglets d'éditeur modifiés (sales) ou non.",
       "installedLanguages": "Langues installées",
       "keybindingStatus": "{0} a été appuyé, en attendant d'autres touches.",
@@ -50,8 +49,6 @@
       "quitMessage": "Les modifications non sauvegardées ne seront pas enregistrées.",
       "quitTitle": "Tu es sûr de vouloir arrêter?",
       "resetWorkbenchLayout": "Réinitialisation de la disposition de l'établi",
-      "sashDelay": "Contrôle le délai de rétroaction du survol en millisecondes de la zone de glissement entre les vues/éditeurs.",
-      "sashSize": "Contrôle la taille de la zone de retour en pixels de la zone de glissement entre les vues/éditeurs. Définissez une valeur plus grande si nécessaire.",
       "searchbox": {
         "close": "Fermer (Escape)",
         "next": "Suivant (en bas)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "instructions"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Utilise un algorithme de différenciation expérimental.",
+      "diffEditor.diffAlgorithm.smart": "Utilise l'algorithme de différenciation par défaut.",
       "diffEditor.maxFileSize": "Taille maximale du fichier en Mo pour laquelle il faut calculer les différences. Utilisez 0 pour ne pas avoir de limite.",
+      "diffEditor.renderMarginRevertIcon": "Lorsqu'il est activé, l'éditeur de différences affiche des flèches dans sa marge de glyphes pour annuler les modifications.",
       "editor.accessibilityPageSize": "Contrôle le nombre de lignes de l'éditeur qui peuvent être lues en une seule fois par un lecteur d'écran. Lorsque nous détectons un lecteur d'écran, nous fixons automatiquement la valeur par défaut à 500. Attention : ceci a une implication sur la performance pour les nombres plus grands que la valeur par défaut.",
-      "editor.autoClosingDelete": "Contrôle si l'éditeur doit supprimer les guillemets fermants ou les parenthèses adjacentes lors de la suppression.",
-      "editor.autoClosingDelete1": "Supprimez les guillemets fermants ou les parenthèses adjacentes uniquement s'ils ont été insérés automatiquement.",
       "editor.bracketPairColorization.enabled": "Contrôle si la colorisation des paires de crochets est activée ou non. Utilisez 'workbench.colorCustomizations' pour modifier les couleurs de surbrillance des crochets.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Contrôle si chaque type de support a son propre pool de couleurs indépendant.",
+      "editor.codeActionWidget.showHeaders": "Activez/désactivez l'affichage des en-têtes de groupe dans le menu d'action du code.",
       "editor.codeLensFontSize": "Contrôle la taille de la police en pixels pour CodeLens. Lorsqu'il a pour valeur `0`, 90% de `#editor.fontSize#` est utilisé.",
-      "editor.find.autoFindInSelection0": "Ne jamais activer la recherche automatique dans la sélection (par défaut).",
-      "editor.find.autoFindInSelection1": "Activez toujours la recherche automatique dans la sélection.",
+      "editor.dropIntoEditor.enabled": "Contrôle si vous pouvez glisser et déposer un fichier dans un éditeur de texte en maintenant la touche `shift` enfoncée (au lieu d'ouvrir le fichier dans un éditeur).",
+      "editor.experimental.pasteActions.enabled": "Activer/désactiver l'exécution des modifications des extensions lors du collage.",
       "editor.find.seedSearchStringFromSelection0": "Ne jamais ensemencer la chaîne de recherche à partir de la sélection de l'éditeur.",
       "editor.find.seedSearchStringFromSelection1": "Toujours ensemencer la chaîne de recherche à partir de la sélection de l'éditeur, y compris le mot à la position du curseur.",
       "editor.find.seedSearchStringFromSelection2": "N'ensemence que la chaîne de recherche de la sélection de l'éditeur.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Les indices d'incrustation sont désactivés",
       "editor.inlayHints.fontFamily": "Contrôle la famille de polices des indices d'incrustation dans l'éditeur. Si la valeur est vide, la `#editor.fontFamily#` est utilisée.",
       "editor.inlayHints.fontSize": "Contrôle la taille de la police des indices d'incrustation dans l'éditeur. Une valeur par défaut de 90% de `#editor.fontSize#` est utilisée lorsque la valeur configurée est inférieure à `5` ou supérieure à la taille de la police de l'éditeur.",
+      "editor.inlayHints.padding": "Active le rembourrage autour des indices de l'incrustation dans l'éditeur.",
       "editor.inlineSuggest.enabled": "Contrôle l'affichage automatique des suggestions en ligne dans l'éditeur.",
       "editor.language.colorizedBracketPairs": "Définit les paires de crochets qui sont colorisées par leur niveau d'imbrication si la colorisation des paires de crochets est activée.",
       "editor.lineHeight": "Contrôle la hauteur de la ligne.\n - Utilisez 0 pour calculer automatiquement la hauteur de ligne à partir de la taille de la police.\n - Les valeurs comprises entre 0 et 8 seront utilisées comme un multiplicateur avec la taille de la police.\n - Les valeurs supérieures ou égales à 8 seront utilisées comme valeurs effectives.",
+      "editor.minimap.autohide": "Contrôle si la minimap est cachée automatiquement.",
+      "editor.multiCursorModifier": "Le modificateur à utiliser pour ajouter plusieurs curseurs avec la souris. Les gestes de la souris \"Aller à la définition\" et \"Ouvrir un lien\" s'adapteront de manière à ne pas entrer en conflit avec le [modificateur de curseurs multiples] (https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Contrôle si les suggestions doivent s'afficher automatiquement pendant la saisie. Cela peut être contrôlé pour la saisie de commentaires, de chaînes de caractères et d'autres codes. La suggestion rapide peut être configurée pour s'afficher sous forme de texte fantôme ou avec le widget de suggestion. Tenez également compte du paramètre '#editor.suggestOnTriggerCharacters#' qui contrôle si les suggestions sont déclenchées par des caractères spéciaux.",
       "editor.quickSuggestions0": "Les suggestions rapides s'affichent dans le widget de suggestion",
       "editor.quickSuggestions1": "Les suggestions rapides s'affichent sous forme de texte fantôme",
       "editor.quickSuggestions2": "Les suggestions rapides sont désactivées",
-      "editor.renderLineHighlightOnlyWhenFocus": "Contrôle si l'éditeur doit rendre la surbrillance de la ligne actuelle uniquement lorsque l'éditeur est focalisé.",
-      "editor.renderWhitespace3": "Rendre uniquement les caractères d'espacement arrière.",
       "editor.scrollbar.horizontal": "Contrôle la visibilité de la barre de défilement horizontale.",
       "editor.scrollbar.horizontal0": "La barre de défilement horizontale ne sera visible que lorsque cela sera nécessaire.",
       "editor.scrollbar.horizontal1": "La barre de défilement horizontale sera toujours visible.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "La barre de défilement verticale sera toujours visible.",
       "editor.scrollbar.vertical2": "La barre de défilement verticale sera toujours masquée.",
       "editor.scrollbar.verticalScrollbarSize": "La largeur de la barre de défilement verticale.",
-      "editor.stickyTabStops": "Emule le comportement de sélection des caractères de tabulation lorsque des espaces sont utilisés pour l'indentation. La sélection collera aux tabulations.",
-      "editor.suggest.localityBonus": "Contrôle si le tri favorise les mots qui apparaissent près du curseur.",
+      "editor.showFoldingControls1": "Ne montrez jamais les commandes de pliage et réduisez la taille de la gouttière.",
+      "editor.stickyScroll.enabled": "Affiche les scopes courants imbriqués pendant le défilement en haut de l'éditeur.",
+      "editor.stickyScroll.maxLineCount": "Définit le nombre maximum de lignes adhésives à afficher.",
+      "editor.suggest.matchOnWordStartOnly": "Lorsqu'il est activé, le filtrage IntelliSense exige que le premier caractère corresponde au début d'un mot, par exemple `c` sur `Console` ou `WebContext` mais _pas_ sur `description`. Lorsqu'il est désactivé, IntelliSense affiche plus de résultats mais les trie toujours par qualité de correspondance.",
       "editor.suggest.preview": "Contrôle l'aperçu du résultat de la suggestion dans l'éditeur.",
       "editor.suggest.showDeprecated": "Lorsqu'il est activé, IntelliSense affiche les suggestions `deprecated`.",
       "editor.unicodeHighlight.allowedCharacters": "Définit les caractères autorisés qui ne sont pas mis en évidence.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Contrôle si les caractères des chaînes de caractères doivent également être soumis à la mise en évidence unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Contrôle si les caractères qui ne réservent qu'un espace ou qui n'ont aucune largeur sont mis en évidence.",
       "editor.unicodeHighlight.nonBasicASCII": "Contrôle si tous les caractères ASCII non basiques sont mis en évidence. Seuls les caractères compris entre U+0020 et U+007E, la tabulation, le saut de ligne et le retour chariot sont considérés comme des caractères ASCII de base.",
-      "editor.wordBasedSuggestionsMode": "Contrôle à partir de quels documents les compléments basés sur les mots sont calculés.",
       "files.autoSave": "Contrôle la [sauvegarde automatique](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) des éditeurs dont les modifications n'ont pas été sauvegardées.",
       "files.autoSave.afterDelay": "Un éditeur avec des modifications est automatiquement enregistré après le `#files.autoSaveDelay#` configuré.",
       "files.autoSave.off": "Un éditeur avec des modifications n'est jamais automatiquement sauvegardé.",
