--- a/packages/core/i18n/nls.hu.json
+++ b/packages/core/i18n/nls.hu.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Böngésszen a oldalon."
       },
-      "hideViewContainer": "Rejtsd el",
       "highlightModifiedTabs": "Szabályozza, hogy a módosított (piszkos) szerkesztő lapok felső szegélye kirajzolódjon-e vagy sem.",
       "installedLanguages": "Telepített nyelvek",
       "keybindingStatus": "{0} megnyomva, további billentyűkre várva",
@@ -50,8 +49,6 @@
       "quitMessage": "A mentetlen módosítások nem kerülnek mentésre.",
       "quitTitle": "Biztos, hogy ki akarsz szállni?",
       "resetWorkbenchLayout": "A munkapad elrendezésének visszaállítása",
-      "sashDelay": "A nézetek/szerkesztők közötti húzási terület lebegés-visszacsatolási késleltetését vezérli milliszekundumban.",
-      "sashSize": "A nézetek/szerkesztők közötti húzási terület visszajelzési területének méretét szabályozza pixelben. Szükség esetén nagyobb értékre állítsa be.",
       "searchbox": {
         "close": "Bezár (menekülés)",
         "next": "Következő (lefelé)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "utasítások"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Kísérleti diffing algoritmust használ.",
+      "diffEditor.diffAlgorithm.smart": "Az alapértelmezett diffing algoritmust használja.",
       "diffEditor.maxFileSize": "Maximális fájlméret MB-ban, amelyre diffs-t kell számítani. Használja a 0 értéket, ha nincs korlát.",
+      "diffEditor.renderMarginRevertIcon": "Ha engedélyezve van, a diff-szerkesztő nyilakat jelenít meg a glifák margóján a változtatások visszaállításához.",
       "editor.accessibilityPageSize": "A szerkesztő azon sorainak számát szabályozza, amelyeket a képernyőolvasó egyszerre fel tud olvasni. Amikor észlelünk egy képernyőolvasót, automatikusan 500-ra állítjuk az alapértelmezett értéket. Figyelmeztetés: ez az alapértelmezettnél nagyobb számok esetén teljesítménybeli következményekkel jár.",
-      "editor.autoClosingDelete": "Szabályozza, hogy a szerkesztő törléskor eltávolítsa-e a szomszédos záró idézőjeleket vagy zárójeleket.",
-      "editor.autoClosingDelete1": "Csak akkor távolítsa el a szomszédos záró idézőjeleket vagy zárójeleket, ha azok automatikusan be lettek illesztve.",
       "editor.bracketPairColorization.enabled": "Szabályozza, hogy a zárójelpár színezése engedélyezve legyen-e vagy sem. A 'workbench.colorCustomizations' használatával felülbírálhatja a zárójelek kiemelési színeit.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Szabályozza, hogy minden zárójel-típusnak legyen-e saját, független színkészlete.",
+      "editor.codeActionWidget.showHeaders": "A csoportfejlécek megjelenítésének engedélyezése/letiltása a kódművelet menüben.",
       "editor.codeLensFontSize": "A CodeLens betűméretét vezérli pixelben. Ha `0`-ra van állítva, akkor a `#editor.fontSize#` 90%-át használja.",
-      "editor.find.autoFindInSelection0": "Soha ne kapcsolja be automatikusan a Keresés a kiválasztásban funkciót (alapértelmezett).",
-      "editor.find.autoFindInSelection1": "Mindig automatikusan kapcsolja be a Keresés a kiválasztásban funkciót.",
+      "editor.dropIntoEditor.enabled": "Azt szabályozza, hogy a \"shift\" lenyomva tartásával húzhat-e egy fájlt egy szövegszerkesztőbe (ahelyett, hogy megnyitná a fájlt egy szerkesztőprogramban).",
+      "editor.experimental.pasteActions.enabled": "Beillesztéskor a bővítményekből származó szerkesztések futásának engedélyezése/tiltása.",
       "editor.find.seedSearchStringFromSelection0": "Soha ne magozzon keresési karakterláncot a szerkesztő kiválasztásából.",
       "editor.find.seedSearchStringFromSelection1": "Mindig a szerkesztő kiválasztásából származó keresési karakterlánc, beleértve a kurzor pozíciójában lévő szót is.",
       "editor.find.seedSearchStringFromSelection2": "Csak a szerkesztő kiválasztásából származó keresési karakterlánc bevetése.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Az inlay tippek le vannak tiltva",
       "editor.inlayHints.fontFamily": "A szerkesztőben lévő betűtípus-családot szabályozza. Ha üres, akkor a `#editor.fontFamily#`-t használja.",
       "editor.inlayHints.fontSize": "A betűméretet szabályozza a szerkesztőben megjelenő betűjelzések betűméretét. Az alapértelmezett érték a `#editor.fontSize#` 90%-a, ha a beállított érték kisebb, mint `5` vagy nagyobb, mint a szerkesztő betűmérete.",
+      "editor.inlayHints.padding": "Engedélyezi a szerkesztőben az inlay tippek körüli kitöltést.",
       "editor.inlineSuggest.enabled": "Szabályozza, hogy a szerkesztőben automatikusan megjelenjenek-e a soron belüli javaslatok.",
       "editor.language.colorizedBracketPairs": "Meghatározza azokat a zárójelpárokat, amelyek színezése a beágyazási szintjük szerint történik, ha a zárójelpárok színezése engedélyezve van.",
       "editor.lineHeight": "A vonal magasságát szabályozza.\n - A 0 értéket használva automatikusan kiszámítja a sortávolságot a betűméretből.\n - A 0 és 8 közötti értékek a betűmérettel való szorzóként kerülnek felhasználásra.\n - A 8-nál nagyobb vagy azzal egyenlő értékek tényleges értékként lesznek használva.",
+      "editor.minimap.autohide": "Szabályozza, hogy a minimap automatikusan el legyen-e rejtve.",
+      "editor.multiCursorModifier": "A módosító, amellyel több kurzort adhatunk hozzá az egérrel. A Go to Definition és a Open Link egérmozdulatok úgy alkalmazkodnak, hogy ne ütközzenek a [több kurzor módosítóval](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Szabályozza, hogy a javaslatok automatikusan megjelenjenek-e gépelés közben. Ezt a megjegyzések, karakterláncok és más kódok beírása esetén lehet szabályozni. A gyors javaslatok beállíthatók úgy, hogy szellemszövegként vagy a javaslat widget segítségével jelenjenek meg. Figyeljen a '#editor.suggestOnTriggerCharacters#'-beállításra is, amely azt szabályozza, hogy a javaslatok speciális karakterek hatására aktiválódjanak-e.",
       "editor.quickSuggestions0": "Gyors javaslatok megjelenítése a suggest widgeten belül",
       "editor.quickSuggestions1": "A gyors javaslatok szellemszövegként jelennek meg",
       "editor.quickSuggestions2": "A gyors javaslatok letiltva",
-      "editor.renderLineHighlightOnlyWhenFocus": "Azt vezérli, hogy a szerkesztő csak akkor jelenítse meg az aktuális sor kiemelését, amikor a szerkesztő fókuszban van.",
-      "editor.renderWhitespace3": "Csak az utolsó szóköz karaktereket adja vissza.",
       "editor.scrollbar.horizontal": "A vízszintes görgetősáv láthatóságát szabályozza.",
       "editor.scrollbar.horizontal0": "A vízszintes görgetősáv csak akkor lesz látható, ha szükséges.",
       "editor.scrollbar.horizontal1": "A vízszintes görgetősáv mindig látható lesz.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "A függőleges görgetősáv mindig látható lesz.",
       "editor.scrollbar.vertical2": "A függőleges görgetősáv mindig el lesz rejtve.",
       "editor.scrollbar.verticalScrollbarSize": "A függőleges görgetősáv szélessége.",
-      "editor.stickyTabStops": "Emulálja a tabulátor karakterek kijelölési viselkedését, amikor szóközöket használ a behúzáshoz. A kijelölés ragaszkodik a tabulátorjelekhez.",
-      "editor.suggest.localityBonus": "Szabályozza, hogy a rendezés előnyben részesítse-e a kurzor közelében megjelenő szavakat.",
+      "editor.showFoldingControls1": "Soha ne mutassa az összecsukható vezérlőket, és csökkentse az ereszcsatorna méretét.",
+      "editor.stickyScroll.enabled": "Megjeleníti a beágyazott aktuális hatóköröket a szerkesztő tetején történő görgetés során.",
+      "editor.stickyScroll.maxLineCount": "Meghatározza a megjelenítendő ragadós sorok maximális számát.",
+      "editor.suggest.matchOnWordStartOnly": "Ha engedélyezve van, az IntelliSense szűrés megköveteli, hogy az első karakter egyezzen a szó elején, pl. \"c\" a \"Konzol\" vagy a \"WebContext\" esetében, de _nem_ a \"leírás\" esetében. Ha kikapcsoljuk, az IntelliSense több eredményt mutat, de továbbra is az egyezés minősége szerint rendezi őket.",
       "editor.suggest.preview": "Szabályozza, hogy a javaslat eredményének előnézete megjelenjen-e a szerkesztőben.",
       "editor.suggest.showDeprecated": "Ha engedélyezve van, az IntelliSense megjeleníti a `deprecated`-ajánlásokat.",
       "editor.unicodeHighlight.allowedCharacters": "Meghatározza a megengedett karaktereket, amelyek nem kerülnek kiemelésre.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Szabályozza, hogy a karakterláncok karakterei is legyenek-e unicode kiemeléssel ellátva.",
       "editor.unicodeHighlight.invisibleCharacters": "Szabályozza, hogy a csak szóközt foglaló vagy egyáltalán nem széles karakterek kiemelésre kerüljenek-e.",
       "editor.unicodeHighlight.nonBasicASCII": "Szabályozza, hogy minden nem alap ASCII karakter ki legyen-e emelve. Csak az U+0020 és U+007E közötti karakterek, a tabulátor, a sortovábbítás és a kocsi-visszavonás számítanak alap ASCII-nek.",
-      "editor.wordBasedSuggestionsMode": "Azt vezérli, hogy mely dokumentumokból számolja ki a szóalapú kiegészítéseket.",
       "files.autoSave": "Az [automatikus mentés](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) vezérli a mentetlen módosításokkal rendelkező szerkesztőket.",
       "files.autoSave.afterDelay": "A szerkesztő a változtatásokat automatikusan elmenti a beállított `#files.autoSaveDelay#` után.",
       "files.autoSave.off": "Egy szerkesztő a módosításokkal soha nem kerül automatikusan mentésre.",
