--- a/packages/core/i18n/nls.ja.json
+++ b/packages/core/i18n/nls.ja.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "ブラウズ"
       },
-      "hideViewContainer": "隠す",
       "highlightModifiedTabs": "モディファイド(ダーティ)エディタのタブにトップボーダーを描画するかどうかを制御します。",
       "installedLanguages": "インストールされている言語",
       "keybindingStatus": "{0}が押されたので、さらにキーを待つ",
@@ -50,8 +49,6 @@
       "quitMessage": "保存されていない変更は、保存されません。",
       "quitTitle": "本当に辞めたいのか?",
       "resetWorkbenchLayout": "ワークベンチレイアウトのリセット",
-      "sashDelay": "ビュー/エディター間でのドラッグ領域のホバーフィードバックの遅延をミリ秒単位で制御します。",
-      "sashSize": "ビュー/エディタ間でのドラッグ領域のフィードバック領域のサイズをピクセル単位で制御します。必要に応じて、より大きな値に設定してください。",
       "searchbox": {
         "close": "閉じる(エスケープ)",
         "next": "次へ(下)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "指令"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "実験的な差分アルゴリズムを使用。",
+      "diffEditor.diffAlgorithm.smart": "デフォルトの diffing アルゴリズムを使用します。",
       "diffEditor.maxFileSize": "差分を計算するファイルの最大サイズをMBで指定します。制限しない場合は 0 を使用します。",
+      "diffEditor.renderMarginRevertIcon": "有効にすると、diff エディタのグリフマージンに矢印が表示され、変更を元に戻すことができます。",
       "editor.accessibilityPageSize": "スクリーン・リーダーが一度に読み上げられるエディターの行数を制御します。スクリーン・リーダーが検出されると、自動的にデフォルトが500に設定されます。警告: デフォルト値よりも大きな数値を設定した場合、パフォーマンスが低下します。",
-      "editor.autoClosingDelete": "削除の際に、隣接する閉じ引用符や括弧を削除するかどうかを制御します。",
-      "editor.autoClosingDelete1": "自動的に挿入された場合のみ、隣接する閉じ引用符または括弧を削除します。",
       "editor.bracketPairColorization.enabled": "ブラケットペアの色付けを有効にするかどうかを制御します。ブラケットのハイライト色をオーバーライドするには 'workbench.colorCustomizations' を使用します。",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "各ブラケットタイプに独立したカラープールを持たせるかどうかを制御します。",
+      "editor.codeActionWidget.showHeaders": "コードアクションメニューにグループヘッダを表示するかどうかを設定します。",
       "editor.codeLensFontSize": "CodeLensのフォントサイズをピクセル単位で制御します。0`に設定すると、`#editor.fontSize#`の90%が使用されます。",
-      "editor.find.autoFindInSelection0": "選択部分の検索を自動的にオンにしない(デフォルト)。",
-      "editor.find.autoFindInSelection1": "常に「選択中の検索」を自動的にオンにします。",
+      "editor.dropIntoEditor.enabled": "ファイルをエディターで開くのではなく、`shift`を押しながらドラッグ＆ドロップしてテキストエディタに入れるかどうかをコントロールします。",
+      "editor.experimental.pasteActions.enabled": "ペースト時に拡張機能からの編集を実行するかしないかを設定します。",
       "editor.find.seedSearchStringFromSelection0": "エディタ選択から検索文字列をシードすることはありません。",
       "editor.find.seedSearchStringFromSelection1": "カーソル位置の単語を含め、常にエディタの選択範囲から検索文字列をシードします。",
       "editor.find.seedSearchStringFromSelection2": "エディタ選択からシード検索文字列のみ。",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "インレイヒントが無効",
       "editor.inlayHints.fontFamily": "エディタ内のインレイヒントのフォントファミリーを制御します。空白に設定すると、`#editor.fontFamily#`が使用されます。",
       "editor.inlayHints.fontSize": "エディターでのインレイヒントのフォントサイズを制御します。設定値が `5` 未満またはエディタのフォントサイズより大きい場合、デフォルトの `#editor.fontSize#` の 90% が使用されます。",
+      "editor.inlayHints.padding": "エディタでインレイのヒントの周りにパディングを有効にします。",
       "editor.inlineSuggest.enabled": "エディタにインラインのサジェストを自動的に表示するかどうかを制御します。",
       "editor.language.colorizedBracketPairs": "ブラケットペアの色付けが有効な場合に、その入れ子レベルによって色付けされるブラケットペアを定義する。",
       "editor.lineHeight": "行の高さを制御します。\n - 0を指定すると、フォントサイズから自動的に行の高さが計算されます。\n - 0から8までの値は、フォントサイズとの乗数として使用されます。\n - 8以上の値は、有効な値として使用されます。",
+      "editor.minimap.autohide": "ミニマップを自動的に隠すかどうかを制御します。",
+      "editor.multiCursorModifier": "マウスで複数のカーソルを追加するときに使用するモディファイアです。定義へ移動およびリンクを開くマウスジェスチャは、[multicursor modifier](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier)と競合しないように適応されます。",
+      "editor.quickSuggestions": "入力中に自動的にサジェストを表示するかどうかを制御します。コメント、文字列、その他のコードを入力する際に制御できます。クイックサジェストは、ゴーストテキストとして表示するか、サジェストウィジェットで表示するかを設定できます。また、'#editor.suggestOnTriggerCharacters#'設定は、特殊な文字でサジェストが発生するかどうかを制御します。",
       "editor.quickSuggestions0": "サジェストウィジェットの中にクイックサジェストを表示",
       "editor.quickSuggestions1": "クイックサジェスト機能をゴーストテキストで表示",
       "editor.quickSuggestions2": "クイックサジェスト機能を無効化",
-      "editor.renderLineHighlightOnlyWhenFocus": "エディタがフォーカスされているときのみ、現在の行のハイライトをレンダリングするかどうかを制御します。",
-      "editor.renderWhitespace3": "末尾の空白文字のみをレンダリングする。",
       "editor.scrollbar.horizontal": "水平スクロールバーの表示/非表示を制御します。",
       "editor.scrollbar.horizontal0": "水平スクロールバーは、必要なときだけ表示されます。",
       "editor.scrollbar.horizontal1": "水平方向のスクロールバーは常に表示されます。",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "垂直スクロールバーは常に表示されます。",
       "editor.scrollbar.vertical2": "垂直スクロールバーは常に非表示になります。",
       "editor.scrollbar.verticalScrollbarSize": "縦スクロールバーの幅を指定します。",
-      "editor.stickyTabStops": "スペースでインデントを行う際に、タブ文字の選択動作をエミュレートします。選択範囲がタブストップに張り付きます。",
-      "editor.suggest.localityBonus": "カーソルの近くに表示される単語を優先してソートするかどうかを制御します。",
+      "editor.showFoldingControls1": "決して折りたたみ操作を見せず、ガターサイズを小さくする。",
+      "editor.stickyScroll.enabled": "エディタ上部のスクロール中に、ネストされた現在のスコープを表示します。",
+      "editor.stickyScroll.maxLineCount": "表示する付箋の最大数を定義します。",
+      "editor.suggest.matchOnWordStartOnly": "インテリセンスのフィルタリングを有効にすると、最初の文字が単語の先頭にマッチする必要があります。例えば、`Console` や `WebContext` では `c` ですが、`description` では _not_ です。無効化すると、インテリセンスはより多くの結果を表示しますが、マッチの質でソートされます。",
       "editor.suggest.preview": "提案の結果をエディターでプレビューするかどうかを制御します。",
       "editor.suggest.showDeprecated": "IntelliSenseを有効にすると、「非推奨」のサジェスチョンが表示されます。",
       "editor.unicodeHighlight.allowedCharacters": "ハイライトされない文字を定義する。",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "文字列内の文字もUnicodeハイライトの対象とするかどうかを制御する。",
       "editor.unicodeHighlight.invisibleCharacters": "スペースを確保するだけの文字や幅のない文字を強調表示するかどうかを制御します。",
       "editor.unicodeHighlight.nonBasicASCII": "すべての非基本ASCII文字をハイライト表示するかどうかを制御します。U+0020 から U+007E までの文字、タブ、ラインフィード、キャリッジリターンのみが基本 ASCII とみなされます。",
-      "editor.wordBasedSuggestionsMode": "どの文書から単語ベースの補完を計算するかを制御します。",
       "files.autoSave": "未保存の変更があるエディターの[自動保存](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save)を制御します。",
       "files.autoSave.afterDelay": "変更されたエディターは、設定された `#files.autoSaveDelay#` の後に自動的に保存されます。",
       "files.autoSave.off": "変更されたエディタは、自動的に保存されることはありません。",
