--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Browse"
       },
-      "hideViewContainer": "Hide",
       "highlightModifiedTabs": "Controls whether a top border is drawn on modified (dirty) editor tabs or not.",
       "installedLanguages": "Installed languages",
       "keybindingStatus": "{0} was pressed, waiting for more keys",
@@ -50,8 +49,6 @@
       "quitMessage": "Any unsaved changes will not be saved.",
       "quitTitle": "Are you sure you want to quit?",
       "resetWorkbenchLayout": "Reset Workbench Layout",
-      "sashDelay": "Controls the hover feedback delay in milliseconds of the dragging area in between views/editors.",
-      "sashSize": "Controls the feedback area size in pixels of the dragging area in between views/editors. Set it to a larger value if needed.",
       "searchbox": {
         "close": "Close (Escape)",
         "next": "Next (Down)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "instructions"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Uses an experimental diffing algorithm.",
+      "diffEditor.diffAlgorithm.smart": "Uses the default diffing algorithm.",
       "diffEditor.maxFileSize": "Maximum file size in MB for which to compute diffs. Use 0 for no limit.",
+      "diffEditor.renderMarginRevertIcon": "When enabled, the diff editor shows arrows in its glyph margin to revert changes.",
       "editor.accessibilityPageSize": "Controls the number of lines in the editor that can be read out by a screen reader at once. When we detect a screen reader we automatically set the default to be 500. Warning: this has a performance implication for numbers larger than the default.",
-      "editor.autoClosingDelete": "Controls whether the editor should remove adjacent closing quotes or brackets when deleting.",
-      "editor.autoClosingDelete1": "Remove adjacent closing quotes or brackets only if they were automatically inserted.",
       "editor.bracketPairColorization.enabled": "Controls whether bracket pair colorization is enabled or not. Use `#workbench.colorCustomizations#` to override the bracket highlight colors.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Controls whether each bracket type has its own independent color pool.",
+      "editor.codeActionWidget.showHeaders": "Enable/disable showing group headers in the code action menu.",
       "editor.codeLensFontSize": "Controls the font size in pixels for CodeLens. When set to `0`, 90% of `#editor.fontSize#` is used.",
-      "editor.find.autoFindInSelection0": "Never turn on Find in Selection automatically (default).",
-      "editor.find.autoFindInSelection1": "Always turn on Find in Selection automatically.",
+      "editor.dropIntoEditor.enabled": "Controls whether you can drag and drop a file into a text editor by holding down `shift` (instead of opening the file in an editor).",
+      "editor.experimental.pasteActions.enabled": "Enable/disable running edits from extensions on paste.",
       "editor.find.seedSearchStringFromSelection0": "Never seed search string from the editor selection.",
       "editor.find.seedSearchStringFromSelection1": "Always seed search string from the editor selection, including word at cursor position.",
       "editor.find.seedSearchStringFromSelection2": "Only seed search string from the editor selection.",
@@ -116,19 +115,21 @@
       "editor.hover.above": "Prefer showing hovers above the line, if there's space.",
       "editor.inlayHints.enabled": "Enables the inlay hints in the editor.",
       "editor.inlayHints.enabled0": "Inlay hints are enabled",
-      "editor.inlayHints.enabled1": "Inlay hints are showing by default and hide when holding `Ctrl+Alt`",
-      "editor.inlayHints.enabled2": "Inlay hints are hidden by default and show when holding `Ctrl+Alt`",
+      "editor.inlayHints.enabled1": "Inlay hints are showing by default and hide when holding Ctrl+Alt",
+      "editor.inlayHints.enabled2": "Inlay hints are hidden by default and show when holding Ctrl+Alt",
       "editor.inlayHints.enabled3": "Inlay hints are disabled",
       "editor.inlayHints.fontFamily": "Controls font family of inlay hints in the editor. When set to empty, the `#editor.fontFamily#` is used.",
       "editor.inlayHints.fontSize": "Controls font size of inlay hints in the editor. As default the `#editor.fontSize#` is used when the configured value is less than `5` or greater than the editor font size.",
+      "editor.inlayHints.padding": "Enables the padding around the inlay hints in the editor.",
       "editor.inlineSuggest.enabled": "Controls whether to automatically show inline suggestions in the editor.",
       "editor.language.colorizedBracketPairs": "Defines the bracket pairs that are colorized by their nesting level if bracket pair colorization is enabled.",
       "editor.lineHeight": "Controls the line height. \n - Use 0 to automatically compute the line height from the font size.\n - Values between 0 and 8 will be used as a multiplier with the font size.\n - Values greater than or equal to 8 will be used as effective values.",
+      "editor.minimap.autohide": "Controls whether the minimap is hidden automatically.",
+      "editor.multiCursorModifier": "The modifier to be used to add multiple cursors with the mouse. The Go to Definition and Open Link mouse gestures will adapt such that they do not conflict with the [multicursor modifier](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Controls whether suggestions should automatically show up while typing. This can be controlled for typing in comments, strings, and other code. Quick suggestion can be configured to show as ghost text or with the suggest widget. Also be aware of the '#editor.suggestOnTriggerCharacters#'-setting which controls if suggestions are triggered by special characters.",
       "editor.quickSuggestions0": "Quick suggestions show inside the suggest widget",
       "editor.quickSuggestions1": "Quick suggestions show as ghost text",
       "editor.quickSuggestions2": "Quick suggestions are disabled",
-      "editor.renderLineHighlightOnlyWhenFocus": "Controls if the editor should render the current line highlight only when the editor is focused.",
-      "editor.renderWhitespace3": "Render only trailing whitespace characters.",
       "editor.scrollbar.horizontal": "Controls the visibility of the horizontal scrollbar.",
       "editor.scrollbar.horizontal0": "The horizontal scrollbar will be visible only when necessary.",
       "editor.scrollbar.horizontal1": "The horizontal scrollbar will always be visible.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "The vertical scrollbar will always be visible.",
       "editor.scrollbar.vertical2": "The vertical scrollbar will always be hidden.",
       "editor.scrollbar.verticalScrollbarSize": "The width of the vertical scrollbar.",
-      "editor.stickyTabStops": "Emulate selection behavior of tab characters when using spaces for indentation. Selection will stick to tab stops.",
-      "editor.suggest.localityBonus": "Controls whether sorting favors words that appear close to the cursor.",
+      "editor.showFoldingControls1": "Never show the folding controls and reduce the gutter size.",
+      "editor.stickyScroll.enabled": "Shows the nested current scopes during the scroll at the top of the editor.",
+      "editor.stickyScroll.maxLineCount": "Defines the maximum number of sticky lines to show.",
+      "editor.suggest.matchOnWordStartOnly": "When enabled IntelliSense filtering requires that the first character matches on a word start, e.g `c` on `Console` or `WebContext` but _not_ on `description`. When disabled IntelliSense will show more results but still sorts them by match quality.",
       "editor.suggest.preview": "Controls whether to preview the suggestion outcome in the editor.",
       "editor.suggest.showDeprecated": "When enabled IntelliSense shows `deprecated`-suggestions.",
       "editor.unicodeHighlight.allowedCharacters": "Defines allowed characters that are not being highlighted.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Controls whether characters in strings should also be subject to unicode highlighting.",
       "editor.unicodeHighlight.invisibleCharacters": "Controls whether characters that just reserve space or have no width at all are highlighted.",
       "editor.unicodeHighlight.nonBasicASCII": "Controls whether all non-basic ASCII characters are highlighted. Only characters between U+0020 and U+007E, tab, line-feed and carriage-return are considered basic ASCII.",
-      "editor.wordBasedSuggestionsMode": "Controls from which documents word based completions are computed.",
       "files.autoSave": "Controls [auto save](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) of editors that have unsaved changes.",
       "files.autoSave.afterDelay": "An editor with changes is automatically saved after the configured `#files.autoSaveDelay#`.",
       "files.autoSave.off": "An editor with changes is never automatically saved.",
