--- a/packages/core/i18n/nls.pt-br.json
+++ b/packages/core/i18n/nls.pt-br.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Navegue"
       },
-      "hideViewContainer": "Esconder",
       "highlightModifiedTabs": "Controla se uma borda superior é desenhada ou não nas abas do editor modificadas (sujas).",
       "installedLanguages": "Idiomas instalados",
       "keybindingStatus": "{0} foi pressionado, esperando por mais teclas",
@@ -50,8 +49,6 @@
       "quitMessage": "Quaisquer mudanças não salvas não serão salvas.",
       "quitTitle": "Você tem certeza de que quer desistir?",
       "resetWorkbenchLayout": "Restabelecer o layout do Workbench",
-      "sashDelay": "Controla o atraso de retroalimentação em milissegundos da área de arrasto entre as vistas/editores.",
-      "sashSize": "Controla o tamanho da área de feedback em pixels da área de arrasto entre as vistas/editores. Ajuste-o para um valor maior, se necessário.",
       "searchbox": {
         "close": "Fechado (Escape)",
         "next": "Próximo (Abaixo)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "instruções"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Utiliza um algoritmo de difusão experimental.",
+      "diffEditor.diffAlgorithm.smart": "Utiliza o algoritmo de difusão padrão.",
       "diffEditor.maxFileSize": "Tamanho máximo de arquivo em MB para o qual calcular diffs. Usar 0 para sem limite.",
+      "diffEditor.renderMarginRevertIcon": "Quando ativado, o editor diff mostra setas em sua margem de glifos para reverter as mudanças.",
       "editor.accessibilityPageSize": "Controla o número de linhas no editor que podem ser lidas por um leitor de tela de uma só vez. Quando detectamos um leitor de tela, definimos automaticamente o padrão como sendo 500. Aviso: isto tem uma implicação de desempenho para números maiores do que o padrão.",
-      "editor.autoClosingDelete": "Controla se o editor deve remover as cotações de fechamento adjacentes ou parênteses ao apagar.",
-      "editor.autoClosingDelete1": "Remover as cotações de fechamento ou colchetes adjacentes somente se elas forem inseridas automaticamente.",
       "editor.bracketPairColorization.enabled": "Controla se a colorização do par de suportes está ou não habilitada. Use 'workbench.colorCustomizations' para sobrepor as cores de realce do par de braquetes.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Controla se cada tipo de suporte tem seu próprio pool de cores independente.",
+      "editor.codeActionWidget.showHeaders": "Habilitar/desabilitar mostrar os cabeçalhos de grupo no menu de ação de código.",
       "editor.codeLensFontSize": "Controla o tamanho da fonte em pixels para a CodeLens. Quando ajustado para `0', 90% do `#editor.fontSize#' é utilizado.",
-      "editor.find.autoFindInSelection0": "Nunca ative o Find in Selection automaticamente (padrão).",
-      "editor.find.autoFindInSelection1": "Ative sempre a opção Find in Selection automaticamente.",
+      "editor.dropIntoEditor.enabled": "Controla se você pode arrastar e soltar um arquivo em um editor de texto segurando o `shift` (em vez de abrir o arquivo em um editor).",
+      "editor.experimental.pasteActions.enabled": "Habilitar/desabilitar a execução de edições a partir de extensões em pasta.",
       "editor.find.seedSearchStringFromSelection0": "Nunca procure por sementes a partir da seleção do editor.",
       "editor.find.seedSearchStringFromSelection1": "Sempre busca de sementes a partir da seleção do editor, incluindo a palavra na posição do cursor.",
       "editor.find.seedSearchStringFromSelection2": "Somente a cadeia de busca de sementes da seleção do editor.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "As dicas da Inlay estão desativadas",
       "editor.inlayHints.fontFamily": "Controla a família de fontes de dicas de incrustação no editor. Quando ajustado para vazio, é utilizado o `#editor.fontFamily#'.",
       "editor.inlayHints.fontSize": "Controla o tamanho da fonte das dicas de inlay no editor. Um padrão de 90% de `#editor.fontSize#` é utilizado quando o valor configurado é menor que `5` ou maior que o tamanho da fonte do editor.",
+      "editor.inlayHints.padding": "Permite o acolchoamento em torno das dicas de embutir no editor.",
       "editor.inlineSuggest.enabled": "Controla se as sugestões em linha devem ser mostradas automaticamente no editor.",
       "editor.language.colorizedBracketPairs": "Define os pares de parênteses que são coloridos por seu nível de agrupamento, se a colorização dos pares de parênteses estiver habilitada.",
       "editor.lineHeight": "Controla a altura da linha.\n - Use 0 para calcular automaticamente a altura da linha a partir do tamanho da fonte.\n - Valores entre 0 e 8 serão usados como um multiplicador com o tamanho da fonte.\n - Valores maiores ou iguais a 8 serão usados como valores efetivos.",
+      "editor.minimap.autohide": "Controla se o minimapa é escondido automaticamente.",
+      "editor.multiCursorModifier": "O modificador a ser usado para adicionar vários cursores com o mouse. Os gestos do mouse Go to Definition e Open Link serão adaptados de forma que não entrem em conflito com o [modificador multicursor](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Controla se as sugestões devem aparecer automaticamente durante a digitação. Isto pode ser controlado para digitação de comentários, strings, e outros códigos. A sugestão rápida pode ser configurada para aparecer como texto fantasma ou com o widget de sugestão. Esteja ciente também do '#editor.suggestOnTriggerCharacters#'-setting que controla se as sugestões são acionadas por caracteres especiais.",
       "editor.quickSuggestions0": "Sugestões rápidas mostram dentro do widget sugerir",
       "editor.quickSuggestions1": "Sugestões rápidas mostram como texto fantasma",
       "editor.quickSuggestions2": "Sugestões rápidas são desativadas",
-      "editor.renderLineHighlightOnlyWhenFocus": "Controla se o editor deve destacar a linha atual apenas quando o editor está focado.",
-      "editor.renderWhitespace3": "Renderizar apenas caracteres de espaços em branco.",
       "editor.scrollbar.horizontal": "Controla a visibilidade da barra de rolagem horizontal.",
       "editor.scrollbar.horizontal0": "A barra de rolagem horizontal será visível somente quando necessário.",
       "editor.scrollbar.horizontal1": "A barra de rolagem horizontal será sempre visível.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "A barra de rolagem vertical será sempre visível.",
       "editor.scrollbar.vertical2": "A barra de rolagem vertical estará sempre escondida.",
       "editor.scrollbar.verticalScrollbarSize": "A largura da barra de rolagem vertical.",
-      "editor.stickyTabStops": "Emular o comportamento de seleção de caracteres de tabulação ao utilizar espaços para indentação. A seleção se aterá aos limites de tabulação.",
-      "editor.suggest.localityBonus": "Controla se a classificação favorece as palavras que aparecem perto do cursor.",
+      "editor.showFoldingControls1": "Nunca mostre os controles dobráveis e reduza o tamanho da calha.",
+      "editor.stickyScroll.enabled": "Mostra os escopos atuais aninhados durante o pergaminho na parte superior do editor.",
+      "editor.stickyScroll.maxLineCount": "Define o número máximo de linhas pegajosas a serem mostradas.",
+      "editor.suggest.matchOnWordStartOnly": "Quando ativada, a filtragem IntelliSense requer que o primeiro caractere corresponda em um início de palavra, por exemplo `c` em `Console` ou `Contexto Web` mas _não_ em `descrição`. Quando desabilitado, o IntelliSense mostrará mais resultados, mas ainda assim os classifica pela qualidade da correspondência.",
       "editor.suggest.preview": "Controla se o resultado da sugestão deve ser visualizado no editor.",
       "editor.suggest.showDeprecated": "Quando habilitado, o IntelliSense mostra as sugestões '-depreendidas'.",
       "editor.unicodeHighlight.allowedCharacters": "Define os caracteres permitidos que não estão sendo destacados.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Controla se os caracteres nas cordas também devem ser sujeitos a destaque unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Controla se os caracteres que apenas reservam espaço ou não têm nenhuma largura são destacados.",
       "editor.unicodeHighlight.nonBasicASCII": "Controla se todos os caracteres ASCII não-básicos são destacados. Somente caracteres entre U+0020 e U+007E, tabulação, alimentação de linha e retorno de carro são considerados ASCII básicos.",
-      "editor.wordBasedSuggestionsMode": "Controles a partir dos quais são calculados os complementos baseados em palavras dos documentos.",
       "files.autoSave": "Controles [auto save](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) de editores que não salvaram mudanças.",
       "files.autoSave.afterDelay": "Um editor com mudanças é automaticamente salvo após o `#files.autoSaveDelay#` configurado.",
       "files.autoSave.off": "Um editor com mudanças nunca é salvo automaticamente.",
