--- a/packages/core/i18n/nls.pt-pt.json
+++ b/packages/core/i18n/nls.pt-pt.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Navegar"
       },
-      "hideViewContainer": "Esconder",
       "highlightModifiedTabs": "Controla se uma borda superior é desenhada ou não em abas de editor modificadas (sujas).",
       "installedLanguages": "Idiomas instalados",
       "keybindingStatus": "{0} foi premido, à espera de mais teclas",
@@ -50,8 +49,6 @@
       "quitMessage": "Quaisquer alterações não guardadas não serão salvas.",
       "quitTitle": "Tem a certeza de que quer desistir?",
       "resetWorkbenchLayout": "Repor o layout da bancada de trabalho",
-      "sashDelay": "Controla o atraso de retroalimentação do pairar em milissegundos da área de arrastamento entre as vistas/editores.",
-      "sashSize": "Controla o tamanho da área de feedback em pixels da área de arrastamento entre vistas/editores. Se necessário, define-o para um valor maior.",
       "searchbox": {
         "close": "Fechar (Escape)",
         "next": "Próximo (Para baixo)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "instruções"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Utiliza um algoritmo de difusão experimental.",
+      "diffEditor.diffAlgorithm.smart": "Utiliza o algoritmo de difusão padrão.",
       "diffEditor.maxFileSize": "Tamanho máximo do ficheiro em MB para o qual se devem calcular diffs. Utilizar 0 para sem limite.",
+      "diffEditor.renderMarginRevertIcon": "Quando activado, o editor dif mostra setas na sua margem de glifos para reverter as alterações.",
       "editor.accessibilityPageSize": "Controla o número de linhas no editor que podem ser lidas por um leitor de ecrã de uma só vez. Quando detectamos um leitor de ecrã, definimos automaticamente o valor por defeito de 500. Aviso: isto tem uma implicação de desempenho para números maiores do que o padrão.",
-      "editor.autoClosingDelete": "Controla se o editor deve remover aspas ou parênteses de fecho adjacentes ao apagar.",
-      "editor.autoClosingDelete1": "Retirar as aspas ou parênteses de fecho adjacentes apenas se forem automaticamente inseridas.",
       "editor.bracketPairColorization.enabled": "Controla se a colorização do par de parênteses está ou não activada. Utilizar 'workbench.colorCustomizations' para anular as cores de realce do par de parênteses.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Controla se cada tipo de suporte tem a sua própria piscina de cores independente.",
+      "editor.codeActionWidget.showHeaders": "Activar/desactivar mostrar os cabeçalhos de grupo no menu de acção de código.",
       "editor.codeLensFontSize": "Controla o tamanho da fonte em pixels para a CodeLens. Quando definido para `0`, 90% do `#editor.fontSize#` é utilizado.",
-      "editor.find.autoFindInSelection0": "Nunca ligar o Find in Selection automaticamente (por defeito).",
-      "editor.find.autoFindInSelection1": "Ligar sempre o Find in Selection automaticamente.",
+      "editor.dropIntoEditor.enabled": "Controla se pode arrastar e largar um ficheiro para um editor de texto, mantendo premido o `shift` (em vez de abrir o ficheiro num editor).",
+      "editor.experimental.pasteActions.enabled": "Activar/desactivar a execução de edições a partir de extensões em pasta.",
       "editor.find.seedSearchStringFromSelection0": "Nunca procurar sementes a partir da selecção do editor.",
       "editor.find.seedSearchStringFromSelection1": "Sempre a cadeia de pesquisa de sementes da selecção do editor, incluindo a palavra na posição do cursor.",
       "editor.find.seedSearchStringFromSelection2": "Apenas a cadeia de pesquisa de sementes da selecção do editor.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "As pistas de Inlay estão desactivadas",
       "editor.inlayHints.fontFamily": "Controla a família de fontes de inlay dicas no editor. Quando definido para vazio, é utilizado o `#editor.fontFamily#`.",
       "editor.inlayHints.fontSize": "Controla o tamanho do tipo de letra das dicas de inlay no editor. Um padrão de 90% de `#editor.fontSize#` é utilizado quando o valor configurado é inferior a `5` ou superior ao tamanho da fonte do editor.",
+      "editor.inlayHints.padding": "Permite o acolchoamento à volta das dicas de incrustação no editor.",
       "editor.inlineSuggest.enabled": "Controla se deve mostrar automaticamente as sugestões em linha no editor.",
       "editor.language.colorizedBracketPairs": "Define os pares de parênteses que são coloridos pelo seu nível de aninhamento se a colorização dos pares de parênteses estiver habilitada.",
       "editor.lineHeight": "Controla a altura da linha.\n - Utilizar 0 para calcular automaticamente a altura da linha a partir do tamanho da fonte.\n - Os valores entre 0 e 8 serão utilizados como multiplicador com o tamanho da fonte.\n - Valores maiores ou iguais a 8 serão utilizados como valores efectivos.",
+      "editor.minimap.autohide": "Controla se o minimapa é escondido automaticamente.",
+      "editor.multiCursorModifier": "O modificador a ser utilizado para adicionar vários cursores com o rato. Os gestos do rato Go to Definition e Open Link serão adaptados de modo a não entrarem em conflito com o [modificador multicursor](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Controla se as sugestões devem aparecer automaticamente durante a dactilografia. Isto pode ser controlado para digitação de comentários, strings, e outros códigos. A sugestão rápida pode ser configurada para aparecer como texto fantasma ou com o widget de sugestão. Esteja também ciente do '#editor.suggestOnTriggerCharacters#'-setting que controla se as sugestões são accionadas por caracteres especiais.",
       "editor.quickSuggestions0": "Sugestões rápidas mostram dentro do widget sugerir",
       "editor.quickSuggestions1": "Sugestões rápidas mostram como texto fantasma",
       "editor.quickSuggestions2": "Sugestões rápidas são desactivadas",
-      "editor.renderLineHighlightOnlyWhenFocus": "Controla se o editor deve destacar a linha actual apenas quando o editor está concentrado.",
-      "editor.renderWhitespace3": "Renderizar apenas caracteres de espaços em branco.",
       "editor.scrollbar.horizontal": "Controla a visibilidade da barra de deslocamento horizontal.",
       "editor.scrollbar.horizontal0": "A barra de deslocamento horizontal só será visível quando necessário.",
       "editor.scrollbar.horizontal1": "A barra de deslocamento horizontal será sempre visível.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "A barra de deslocamento vertical será sempre visível.",
       "editor.scrollbar.vertical2": "A barra de deslocamento vertical será sempre escondida.",
       "editor.scrollbar.verticalScrollbarSize": "A largura da barra de deslocamento vertical.",
-      "editor.stickyTabStops": "Emular o comportamento de selecção de caracteres de tabulação ao utilizar espaços para indentação. A selecção manterá os limites de tabulação.",
-      "editor.suggest.localityBonus": "Controla se a ordenação favorece as palavras que aparecem perto do cursor.",
+      "editor.showFoldingControls1": "Nunca mostrar os controlos dobráveis e reduzir o tamanho da sarjeta.",
+      "editor.stickyScroll.enabled": "Mostra os âmbitos actuais aninhados durante o pergaminho na parte superior do editor.",
+      "editor.stickyScroll.maxLineCount": "Define o número máximo de linhas pegajosas a mostrar.",
+      "editor.suggest.matchOnWordStartOnly": "Quando activada, a filtragem IntelliSense requer que o primeiro caractere corresponda num início de palavra, por exemplo `c` em `Console` ou `Contexto Web` mas _não_ em `descrição`. Quando desactivado, o IntelliSense mostrará mais resultados, mas ainda os classifica pela qualidade da correspondência.",
       "editor.suggest.preview": "Controla se é necessário prever o resultado da sugestão no editor.",
       "editor.suggest.showDeprecated": "Quando activado, o IntelliSense mostra \"sugestões-depreendidas\".",
       "editor.unicodeHighlight.allowedCharacters": "Define os caracteres permitidos que não estão a ser destacados.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Controla se os caracteres nas cordas também devem ser sujeitos a destaque unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Controla se os caracteres que apenas reservam espaço ou que não têm qualquer largura são realçados.",
       "editor.unicodeHighlight.nonBasicASCII": "Controla se todos os caracteres ASCII não-básicos são realçados. Apenas os caracteres entre U+0020 e U+007E, tab, line-feed e carriage-return são considerados ASCII básicos.",
-      "editor.wordBasedSuggestionsMode": "Controlos a partir dos quais são calculados os complementos baseados em palavras dos documentos.",
       "files.autoSave": "Controla [auto guardar](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) de editores que tenham alterações não guardadas.",
       "files.autoSave.afterDelay": "Um editor com alterações é automaticamente guardado após a configuração `#files.autoSaveDelay#``.",
       "files.autoSave.off": "Um editor com alterações nunca é automaticamente guardado.",
