--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Просмотреть"
       },
-      "hideViewContainer": "Скрыть",
       "highlightModifiedTabs": "Управляет тем, будет ли рисоваться верхняя граница на измененных (грязных) вкладках редактора или нет.",
       "installedLanguages": "Установленные языки",
       "keybindingStatus": "{0} было нажато, ожидание других клавиш",
@@ -50,8 +49,6 @@
       "quitMessage": "Любые несохраненные изменения не будут сохранены.",
       "quitTitle": "Вы уверены, что хотите уволиться?",
       "resetWorkbenchLayout": "Сброс макета верстака",
-      "sashDelay": "Управляет задержкой обратной связи при наведении в миллисекундах на область перетаскивания между видами/редакторами.",
-      "sashSize": "Управляет размером области обратной связи в пикселях области перетаскивания между видами/редакторами. При необходимости установите большее значение.",
       "searchbox": {
         "close": "Закрыть (побег)",
         "next": "Далее (вниз)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "инструкции"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Использует экспериментальный алгоритм диффинга.",
+      "diffEditor.diffAlgorithm.smart": "Использует алгоритм диффиринга по умолчанию.",
       "diffEditor.maxFileSize": "Максимальный размер файла в МБ, для которого следует вычислять различия. Используйте 0 для отсутствия ограничений.",
+      "diffEditor.renderMarginRevertIcon": "Если эта функция включена, редактор различий показывает стрелки на полях глифов для отмены изменений.",
       "editor.accessibilityPageSize": "Управляет количеством строк в редакторе, которые могут быть одновременно считаны устройством чтения с экрана. Когда мы обнаруживаем устройство чтения с экрана, мы автоматически устанавливаем значение по умолчанию 500. Внимание: это имеет последствия для производительности при числах, превышающих значение по умолчанию.",
-      "editor.autoClosingDelete": "Управляет тем, должен ли редактор удалять соседние закрывающие кавычки или скобки при удалении.",
-      "editor.autoClosingDelete1": "Удаляйте соседние закрывающие кавычки или скобки, только если они были вставлены автоматически.",
       "editor.bracketPairColorization.enabled": "Управляет тем, включена или нет раскраска пар скобок. Используйте 'workbench.colorCustomizations', чтобы переопределить цвета подсветки скобок.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Управляет тем, имеет ли каждый тип скобок свой собственный независимый пул цветов.",
+      "editor.codeActionWidget.showHeaders": "Включить/выключить показ заголовков групп в меню действий кода.",
       "editor.codeLensFontSize": "Управляет размером шрифта в пикселях для CodeLens. Если установлено значение `0`, используется 90% от `#editor.fontSize#`.",
-      "editor.find.autoFindInSelection0": "Никогда не включать функцию \"Найти в выделенном\" автоматически (по умолчанию).",
-      "editor.find.autoFindInSelection1": "Всегда автоматически включайте функцию \"Найти в выделенном\".",
+      "editor.dropIntoEditor.enabled": "Позволяет перетащить файл в текстовый редактор, удерживая клавишу `shift` (вместо открытия файла в редакторе).",
+      "editor.experimental.pasteActions.enabled": "Включение/выключение запуска редактирования из расширений при вставке.",
       "editor.find.seedSearchStringFromSelection0": "Никогда не засевайте строку поиска из выбора редактора.",
       "editor.find.seedSearchStringFromSelection1": "Всегда загружает строку поиска из выбора редактора, включая слово в позиции курсора.",
       "editor.find.seedSearchStringFromSelection2": "Только запуск строки поиска из выбора редактора.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Подсказки для инкрустации отключены",
       "editor.inlayHints.fontFamily": "Управляет семейством шрифтов подсказок инкрустации в редакторе. Если установлено значение empty, используется `#editor.fontFamily#`.",
       "editor.inlayHints.fontSize": "Управляет размером шрифта подсказок инлея в редакторе. По умолчанию используется 90% от `#editor.fontSize#`, если настроенное значение меньше `5` или больше размера шрифта редактора.",
+      "editor.inlayHints.padding": "Включает подкладку вокруг подсказок инкрустации в редакторе.",
       "editor.inlineSuggest.enabled": "Управляет тем, показывать ли автоматически встроенные предложения в редакторе.",
       "editor.language.colorizedBracketPairs": "Определяет пары скобок, которые раскрашиваются по уровню вложенности, если раскраска пар скобок включена.",
       "editor.lineHeight": "Управляет высотой строки.\n - Используйте значение 0, чтобы автоматически вычислить высоту строки на основе размера шрифта.\n - Значения от 0 до 8 будут использоваться как множитель с размером шрифта.\n - Значения больше или равные 8 будут использоваться как эффективные значения.",
+      "editor.minimap.autohide": "Управляет тем, будет ли мини-карта скрываться автоматически.",
+      "editor.multiCursorModifier": "Модификатор, который будет использоваться для добавления нескольких курсоров с помощью мыши. Жесты мыши \"Перейти к определению\" и \"Открыть ссылку\" будут адаптированы таким образом, чтобы они не конфликтовали с модификатором [multicursor modifier](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Управляет тем, должны ли предложения автоматически появляться при вводе текста. Этим можно управлять при вводе комментариев, строк и другого кода. Быстрые предложения могут быть настроены на отображение в виде призрачного текста или виджета предложений. Также обратите внимание на настройку '#editor.suggestOnTriggerCharacters#', которая определяет, будут ли появляться предложения при использовании специальных символов.",
       "editor.quickSuggestions0": "Быстрые предложения отображаются внутри виджета предложений",
       "editor.quickSuggestions1": "Быстрые предложения отображаются в виде призрачного текста",
       "editor.quickSuggestions2": "Быстрые предложения отключены",
-      "editor.renderLineHighlightOnlyWhenFocus": "Управляет тем, должен ли редактор отображать подсветку текущей строки только тогда, когда редактор сфокусирован.",
-      "editor.renderWhitespace3": "Передача только пробельных символов в конце строки.",
       "editor.scrollbar.horizontal": "Управляет видимостью горизонтальной полосы прокрутки.",
       "editor.scrollbar.horizontal0": "Горизонтальная полоса прокрутки будет видна только при необходимости.",
       "editor.scrollbar.horizontal1": "Горизонтальная полоса прокрутки всегда будет видна.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "Вертикальная полоса прокрутки всегда будет видна.",
       "editor.scrollbar.vertical2": "Вертикальная полоса прокрутки всегда будет скрыта.",
       "editor.scrollbar.verticalScrollbarSize": "Ширина вертикальной полосы прокрутки.",
-      "editor.stickyTabStops": "Эмулирует поведение символов табуляции при использовании пробелов для отступов. Выделение будет прилипать к ограничителям табуляции.",
-      "editor.suggest.localityBonus": "Управляет тем, отдает ли сортировка предпочтение словам, которые появляются рядом с курсором.",
+      "editor.showFoldingControls1": "Никогда не показывайте складные регуляторы и не уменьшайте размер желоба.",
+      "editor.stickyScroll.enabled": "Показывает вложенные текущие области видимости при прокрутке в верхней части редактора.",
+      "editor.stickyScroll.maxLineCount": "Определяет максимальное количество отображаемых липких линий.",
+      "editor.suggest.matchOnWordStartOnly": "При включении фильтрации IntelliSense требуется, чтобы первый символ совпадал с началом слова, например, `c` в `Console` или `WebContext`, но _нет_ в `description`. При отключении IntelliSense показывает больше результатов, но все равно сортирует их по качеству совпадения.",
       "editor.suggest.preview": "Служит для управления предварительным просмотром результатов предложения в редакторе.",
       "editor.suggest.showDeprecated": "При включении IntelliSense показывает `deprecated`-предложения.",
       "editor.unicodeHighlight.allowedCharacters": "Определяет разрешенные символы, которые не выделяются.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Управляет тем, должны ли символы в строках также подвергаться выделению юникодом.",
       "editor.unicodeHighlight.invisibleCharacters": "Позволяет определить, будут ли выделены символы, которые только резервируют пространство или вообще не имеют ширины.",
       "editor.unicodeHighlight.nonBasicASCII": "Позволяет определить, будут ли выделены все небазовые символы ASCII. Только символы от U+0020 до U+007E, табуляция, перевод строки и возврат каретки считаются базовыми ASCII.",
-      "editor.wordBasedSuggestionsMode": "Управляет тем, на основе каких документов вычисляются словосочетания.",
       "files.autoSave": "Управляет [автосохранением](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) редакторов, в которых есть несохраненные изменения.",
       "files.autoSave.afterDelay": "Редактор с изменениями автоматически сохраняется по истечении настроенной `#files.autoSaveDelay#`.",
       "files.autoSave.off": "Редактор с изменениями никогда не сохраняется автоматически.",
