--- a/packages/core/i18n/nls.zh-cn.json
+++ b/packages/core/i18n/nls.zh-cn.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "浏览"
       },
-      "hideViewContainer": "隐藏",
       "highlightModifiedTabs": "控制是否在修改过的(dirty)编辑器标签上绘制顶部边框。",
       "installedLanguages": "已安装的语言",
       "keybindingStatus": "{0}被按下,等待更多的按键",
@@ -50,8 +49,6 @@
       "quitMessage": "任何未保存的修改都不会被保存。",
       "quitTitle": "你确定你要退出吗?",
       "resetWorkbenchLayout": "重置工作台面布局",
-      "sashDelay": "控制视图/编辑器之间拖动区域的悬停反馈延迟,单位为毫秒。",
-      "sashSize": "控制在视图/编辑器之间的拖动区域的反馈区域大小,以像素为单位。如果需要的话,把它设置成一个较大的值。",
       "searchbox": {
         "close": "关闭 (Escape)",
         "next": "下一页 (向下)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "说明"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "使用一种实验性的扩散算法。",
+      "diffEditor.diffAlgorithm.smart": "使用默认的差分算法。",
       "diffEditor.maxFileSize": "要为其计算差异的最大文件大小(MB)。使用 0 表示无限制。",
+      "diffEditor.renderMarginRevertIcon": "启用后,差异编辑器在其字形边框中显示箭头,以恢复修改。",
       "editor.accessibilityPageSize": "控制编辑器中可由屏幕阅读器一次读出的行数。当检测到屏幕阅读器时，会自动将默认值设置为 500。警告: 如果行数大于默认值，可能会影响性能。",
-      "editor.autoClosingDelete": "控制在删除时编辑器是否应删除相邻的右引号或右方括号。",
-      "editor.autoClosingDelete1": "只有在相邻的闭合引号或方括号被自动插入的情况下,才能删除它们。",
       "editor.bracketPairColorization.enabled": "控制是否已启用括号对着色。使用 `#workbench.colorCustomizations#` 替代括号高亮颜色。",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "控制每个托架类型是否有自己独立的颜色池。",
+      "editor.codeActionWidget.showHeaders": "启用/禁用在代码动作菜单中显示组标题。",
       "editor.codeLensFontSize": "控制 CodeLens 的字号(以像素为单位)。设置为 `0` 时，将使用 90% 的 `#editor.fontSize#`。",
-      "editor.find.autoFindInSelection0": "从不自动打开“在选定内容中查找”(默认)。",
-      "editor.find.autoFindInSelection1": "始终自动打开“在选定内容中查找”。",
+      "editor.dropIntoEditor.enabled": "控制你是否可以通过按住`shift`将文件拖入文本编辑器(而不是在编辑器中打开文件)。",
+      "editor.experimental.pasteActions.enabled": "启用/禁用在粘贴时从扩展程序中运行编辑。",
       "editor.find.seedSearchStringFromSelection0": "切勿为编辑器选择中的搜索字符串设定种子。",
       "editor.find.seedSearchStringFromSelection1": "始终为编辑器选择中的搜索字符串设定种子，包括光标位置的字词。",
       "editor.find.seedSearchStringFromSelection2": "仅为编辑器选择中的搜索字符串设定种子。",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "镶嵌提示被禁用",
       "editor.inlayHints.fontFamily": "控制编辑器中内联提示的字体家族。当设置为空时,使用`#editor.fontFamily#`。",
       "editor.inlayHints.fontSize": "控制编辑器中内联提示的字体大小。当配置值小于`5'或大于编辑器的字体大小时,默认使用`#editor.fontSize#`的90%。",
+      "editor.inlayHints.padding": "启用编辑器中嵌套提示周围的填充。",
       "editor.inlineSuggest.enabled": "控制是否在编辑器中自动显示内联建议。",
       "editor.language.colorizedBracketPairs": "如果启用了括号对着色,则定义括号对按其嵌套级别进行着色。",
       "editor.lineHeight": "控制行高。\n - 使用0可以根据字体大小自动计算行高。\n - 0到8之间的值将被用作字体大小的乘数。\n - 大于或等于8的值将作为有效值使用。",
+      "editor.minimap.autohide": "控制是否自动隐藏小地图。",
+      "editor.multiCursorModifier": "用于用鼠标添加多个光标的修改器。转到定义和打开链接的鼠标手势将进行调整,使其不与[多光标修改器](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier)冲突。",
+      "editor.quickSuggestions": "控制在输入时是否应该自动显示建议。这可以在输入评论、字符串和其他代码时加以控制。快速建议可以被配置为显示为幽灵文本或建议小部件。还要注意'#editor.suggestOnTriggerCharacters#'设置,它控制建议是否被特殊字符触发。",
       "editor.quickSuggestions0": "快速建议显示在建议小部件内",
       "editor.quickSuggestions1": "快速建议显示为幽灵文本",
       "editor.quickSuggestions2": "快速建议被禁用",
-      "editor.renderLineHighlightOnlyWhenFocus": "控制编辑器是否应该只在编辑器被聚焦时呈现当前行的高亮。",
-      "editor.renderWhitespace3": "只渲染尾部的空白字符。",
       "editor.scrollbar.horizontal": "控制水平滚动条的可见性。",
       "editor.scrollbar.horizontal0": "水平滚动条只有在必要时才会显现。",
       "editor.scrollbar.horizontal1": "水平滚动条将始终可见。",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "垂直滚动条将始终可见。",
       "editor.scrollbar.vertical2": "垂直滚动条将始终被隐藏。",
       "editor.scrollbar.verticalScrollbarSize": "垂直滚动条的宽度。",
-      "editor.stickyTabStops": "当使用空格缩进时,模仿制表符的选择行为。选择将坚持到制表符的位置。",
-      "editor.suggest.localityBonus": "控制排序是否偏向于出现在光标附近的单词。",
+      "editor.showFoldingControls1": "千万不要显示折叠式控制,减少水沟的大小。",
+      "editor.stickyScroll.enabled": "在编辑器顶部的滚动中显示嵌套的当前作用域。",
+      "editor.stickyScroll.maxLineCount": "定义要显示的最大粘性线数。",
+      "editor.suggest.matchOnWordStartOnly": "当启用IntelliSense过滤功能时,需要在一个词的开头匹配第一个字符,例如在 \"Console \"或 \"WebContext \"上的 \"c\",但在 \"description \"上_不需要。当禁用IntelliSense时,将显示更多的结果,但仍然按照匹配质量进行排序。",
       "editor.suggest.preview": "控制是否在编辑器中预览建议结果。",
       "editor.suggest.showDeprecated": "当启用IntelliSense时,会显示 \"删除 \"的建议。",
       "editor.unicodeHighlight.allowedCharacters": "定义了不被高亮显示的允许的字符。",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "控制字符串中的字符是否也应受制于unicode高亮显示。",
       "editor.unicodeHighlight.invisibleCharacters": "控制仅保留空间或完全没有宽度的字符是否被突出显示。",
       "editor.unicodeHighlight.nonBasicASCII": "控制是否突出显示所有非基本ASCII字符。只有U+0020和U+007E之间的字符、制表符、换行符和回车符被视为基本ASCII。",
-      "editor.wordBasedSuggestionsMode": "控制从哪些文件中计算出基于单词的完成度。",
       "files.autoSave": "控制有未保存的修改的编辑器的[自动保存](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save)。",
       "files.autoSave.afterDelay": "在配置的 `#files.autoSaveDelay#`之后,有改动的编辑器会自动保存。",
       "files.autoSave.off": "有变化的编辑器永远不会被自动保存。",
