--- a/packages/core/i18n/nls.es.json
+++ b/packages/core/i18n/nls.es.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Visite"
       },
-      "hideViewContainer": "Ocultar",
       "highlightModifiedTabs": "Controla si se dibuja un borde superior en las pestañas modificadas (sucias) del editor o no.",
       "installedLanguages": "Idiomas instalados",
       "keybindingStatus": "{0} fue presionado, esperando más teclas",
@@ -50,8 +49,6 @@
       "quitMessage": "Cualquier cambio no guardado no se guardará.",
       "quitTitle": "¿Estás seguro de que quieres dejarlo?",
       "resetWorkbenchLayout": "Restablecer la disposición del banco de trabajo",
-      "sashDelay": "Controla el retardo de retroalimentación en milisegundos del área de arrastre entre vistas/editores.",
-      "sashSize": "Controla el tamaño del área de retroalimentación en píxeles del área de arrastre entre vistas/editores. Ajústelo a un valor mayor si es necesario.",
       "searchbox": {
         "close": "Cerrar (Escapar)",
         "next": "Siguiente (abajo)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "instrucciones"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Utiliza un algoritmo de difusión experimental.",
+      "diffEditor.diffAlgorithm.smart": "Utiliza el algoritmo de diffing por defecto.",
       "diffEditor.maxFileSize": "Tamaño máximo del archivo en MB para el que se calculan los diffs. Utilice 0 para no tener límite.",
+      "diffEditor.renderMarginRevertIcon": "Cuando está activado, el editor de diferencias muestra flechas en su margen de glifos para revertir los cambios.",
       "editor.accessibilityPageSize": "Controla el número de líneas del editor que pueden ser leídas por un lector de pantalla a la vez. Cuando detectamos un lector de pantalla, fijamos automáticamente el valor por defecto en 500. Advertencia: esto tiene una implicación de rendimiento para números mayores que el predeterminado.",
-      "editor.autoClosingDelete": "Controla si el editor debe eliminar las comillas de cierre adyacentes o los corchetes al borrar.",
-      "editor.autoClosingDelete1": "Elimine las comillas de cierre adyacentes o los corchetes sólo si se insertaron automáticamente.",
       "editor.bracketPairColorization.enabled": "Controla si la coloración del par de corchetes está activada o no. Utilice 'workbench.colorCustomizations' para anular los colores de resaltado de los corchetes.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Controla si cada tipo de soporte tiene su propia reserva de color independiente.",
+      "editor.codeActionWidget.showHeaders": "Activar/desactivar la visualización de las cabeceras de los grupos en el menú de acción del código.",
       "editor.codeLensFontSize": "Controla el tamaño de la fuente en píxeles para CodeLens. Cuando se establece en `0`, se utiliza el 90% de `#editor.fontSize#`.",
-      "editor.find.autoFindInSelection0": "No activar nunca la función Buscar en la selección automáticamente (por defecto).",
-      "editor.find.autoFindInSelection1": "Activar siempre automáticamente la función Buscar en la selección.",
+      "editor.dropIntoEditor.enabled": "Controla si puedes arrastrar y soltar un archivo en un editor de texto manteniendo pulsada la tecla `mayúscula` (en lugar de abrir el archivo en un editor).",
+      "editor.experimental.pasteActions.enabled": "Habilitar/deshabilitar la ejecución de ediciones desde las extensiones al pegar.",
       "editor.find.seedSearchStringFromSelection0": "Nunca sembrar la cadena de búsqueda desde la selección del editor.",
       "editor.find.seedSearchStringFromSelection1": "Siempre sembrar la cadena de búsqueda de la selección del editor, incluyendo la palabra en la posición del cursor.",
       "editor.find.seedSearchStringFromSelection2": "Sólo sembrar la cadena de búsqueda de la selección del editor.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Las sugerencias de incrustación están desactivadas",
       "editor.inlayHints.fontFamily": "Controla la familia de fuentes de las sugerencias de incrustación en el editor. Cuando se establece en vacío, se utiliza `#editor.fontFamily#`.",
       "editor.inlayHints.fontSize": "Controla el tamaño de la fuente de las sugerencias de incrustación en el editor. Se utiliza un valor por defecto del 90% de `#editor.fontSize#` cuando el valor configurado es menor que `5` o mayor que el tamaño de la fuente del editor.",
+      "editor.inlayHints.padding": "Activa el relleno alrededor de las sugerencias de incrustación en el editor.",
       "editor.inlineSuggest.enabled": "Controla si se muestran automáticamente las sugerencias en línea en el editor.",
       "editor.language.colorizedBracketPairs": "Define los pares de corchetes que se colorean por su nivel de anidamiento si la coloración de pares de corchetes está activada.",
       "editor.lineHeight": "Controla la altura de la línea.\n - Utilice 0 para calcular automáticamente la altura de la línea a partir del tamaño de la fuente.\n - Los valores entre 0 y 8 se utilizarán como un multiplicador con el tamaño de la fuente.\n - Los valores mayores o iguales a 8 se utilizarán como valores efectivos.",
+      "editor.minimap.autohide": "Controla si el minimapa se oculta automáticamente.",
+      "editor.multiCursorModifier": "El modificador que se utilizará para añadir múltiples cursores con el ratón. Los gestos del ratón Ir a la definición y Abrir enlace se adaptarán de tal manera que no entren en conflicto con el [modificador multicursor](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Controla si las sugerencias deben aparecer automáticamente mientras se escribe. Esto puede controlarse para escribir comentarios, cadenas y otros códigos. La sugerencia rápida puede ser configurada para mostrarse como texto fantasma o con el widget de sugerencia. También hay que tener en cuenta la configuración '#editor.suggestOnTriggerCharacters#' que controla si las sugerencias son activadas por caracteres especiales.",
       "editor.quickSuggestions0": "Las sugerencias rápidas se muestran dentro del widget de sugerencias",
       "editor.quickSuggestions1": "Las sugerencias rápidas se muestran como texto fantasma",
       "editor.quickSuggestions2": "Las sugerencias rápidas están desactivadas",
-      "editor.renderLineHighlightOnlyWhenFocus": "Controla si el editor debe mostrar el resaltado de la línea actual sólo cuando el editor está enfocado.",
-      "editor.renderWhitespace3": "Renderiza sólo los caracteres de los espacios en blanco finales.",
       "editor.scrollbar.horizontal": "Controla la visibilidad de la barra de desplazamiento horizontal.",
       "editor.scrollbar.horizontal0": "La barra de desplazamiento horizontal será visible sólo cuando sea necesario.",
       "editor.scrollbar.horizontal1": "La barra de desplazamiento horizontal será siempre visible.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "La barra de desplazamiento vertical será siempre visible.",
       "editor.scrollbar.vertical2": "La barra de desplazamiento vertical estará siempre oculta.",
       "editor.scrollbar.verticalScrollbarSize": "El ancho de la barra de desplazamiento vertical.",
-      "editor.stickyTabStops": "Emula el comportamiento de selección de los caracteres de tabulación cuando se utilizan espacios para la sangría. La selección se pegará a los topes de tabulación.",
-      "editor.suggest.localityBonus": "Controla si la clasificación favorece las palabras que aparecen cerca del cursor.",
+      "editor.showFoldingControls1": "Nunca muestre los controles de plegado y reduzca el tamaño del canalón.",
+      "editor.stickyScroll.enabled": "Muestra los ámbitos actuales anidados durante el desplazamiento en la parte superior del editor.",
+      "editor.stickyScroll.maxLineCount": "Define el número máximo de líneas adhesivas a mostrar.",
+      "editor.suggest.matchOnWordStartOnly": "Cuando se activa el filtro IntelliSense se requiere que el primer carácter coincida con el inicio de una palabra, por ejemplo `c` en `Console` o `WebContext` pero _no_ en `description`. Si se desactiva, IntelliSense mostrará más resultados, pero los ordenará según la calidad de la coincidencia.",
       "editor.suggest.preview": "Controla si se puede previsualizar el resultado de la sugerencia en el editor.",
       "editor.suggest.showDeprecated": "Cuando se activa IntelliSense muestra sugerencias `deprecadas`.",
       "editor.unicodeHighlight.allowedCharacters": "Define los caracteres permitidos que no se están resaltando.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Controla si los caracteres de las cadenas deben ser también objeto de resaltado unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Controla si se resaltan los caracteres que sólo reservan espacio o que no tienen ninguna anchura.",
       "editor.unicodeHighlight.nonBasicASCII": "Controla si se resaltan todos los caracteres ASCII no básicos. Sólo los caracteres entre U+0020 y U+007E, el tabulador, el salto de línea y el retorno de carro se consideran ASCII básicos.",
-      "editor.wordBasedSuggestionsMode": "Controla a partir de qué documentos se calculan las terminaciones basadas en palabras.",
       "files.autoSave": "Controla el [autoguardado](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) de los editores que tienen cambios sin guardar.",
       "files.autoSave.afterDelay": "Un editor con cambios se guarda automáticamente después del `#files.autoSaveDelay#` configurado.",
       "files.autoSave.off": "Un editor con cambios nunca se guarda automáticamente.",
