--- a/packages/core/i18n/nls.it.json
+++ b/packages/core/i18n/nls.it.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Sfogliare"
       },
-      "hideViewContainer": "Nascondere",
       "highlightModifiedTabs": "Controlla se un bordo superiore è disegnato sulle schede dell'editor modificate (sporche) o no.",
       "installedLanguages": "Lingue installate",
       "keybindingStatus": "{0} è stato premuto, in attesa di altri tasti",
@@ -50,8 +49,6 @@
       "quitMessage": "Qualsiasi modifica non salvata non sarà salvata.",
       "quitTitle": "Sei sicuro di voler smettere?",
       "resetWorkbenchLayout": "Ripristinare il layout del banco di lavoro",
-      "sashDelay": "Controlla il ritardo in millisecondi del feedback di hover dell'area di trascinamento tra le viste/editori.",
-      "sashSize": "Controlla la dimensione dell'area di feedback in pixel dell'area di trascinamento tra le viste/editori. Impostalo su un valore più grande se necessario.",
       "searchbox": {
         "close": "Chiudere (Fuga)",
         "next": "Avanti (Giù)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "istruzioni"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Utilizza un algoritmo di diffing sperimentale.",
+      "diffEditor.diffAlgorithm.smart": "Utilizza l'algoritmo di differenziazione predefinito.",
       "diffEditor.maxFileSize": "Dimensione massima del file in MB per cui calcolare le differenze. Usa 0 per nessun limite.",
+      "diffEditor.renderMarginRevertIcon": "Quando è abilitato, l'editor diff mostra delle frecce nel margine del glifo per annullare le modifiche.",
       "editor.accessibilityPageSize": "Controlla il numero di linee nell'editor che possono essere lette da uno screen reader in una volta sola. Quando rileviamo uno screen reader impostiamo automaticamente il valore predefinito a 500. Attenzione: questo ha un'implicazione sulle prestazioni per numeri più grandi di quello predefinito.",
-      "editor.autoClosingDelete": "Controlla se l'editor deve rimuovere le virgolette o le parentesi di chiusura adiacenti quando cancella.",
-      "editor.autoClosingDelete1": "Rimuovi le virgolette o le parentesi di chiusura adiacenti solo se sono state inserite automaticamente.",
       "editor.bracketPairColorization.enabled": "Controlla se la colorazione delle coppie di parentesi è abilitata o meno. Usa 'workbench.colorCustomizations' per sovrascrivere i colori di evidenziazione delle parentesi.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Controlla se ogni tipo di staffa ha il suo pool di colori indipendente.",
+      "editor.codeActionWidget.showHeaders": "Abilita/disabilita la visualizzazione delle intestazioni dei gruppi nel menu delle azioni del codice.",
       "editor.codeLensFontSize": "Controlla la dimensione del carattere in pixel per CodeLens. Se impostato a `0`, viene usato il 90% di `#editor.fontSize#`.",
-      "editor.find.autoFindInSelection0": "Non attivare mai automaticamente Find in Selection (predefinito).",
-      "editor.find.autoFindInSelection1": "Attivare sempre automaticamente Find in Selection.",
+      "editor.dropIntoEditor.enabled": "Controlla se è possibile trascinare e rilasciare un file in un editor di testo tenendo premuto `shift` (invece di aprire il file in un editor).",
+      "editor.experimental.pasteActions.enabled": "Abilita/disabilita l'esecuzione di modifiche da parte delle estensioni in fase di incollaggio.",
       "editor.find.seedSearchStringFromSelection0": "Mai seminare la stringa di ricerca dalla selezione dell'editor.",
       "editor.find.seedSearchStringFromSelection1": "Semina sempre la stringa di ricerca dalla selezione dell'editor, inclusa la parola nella posizione del cursore.",
       "editor.find.seedSearchStringFromSelection2": "Seme solo la stringa di ricerca dalla selezione dell'editor.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "I suggerimenti per l'intarsio sono disabilitati",
       "editor.inlayHints.fontFamily": "Controlla la famiglia di caratteri dei suggerimenti inlay nell'editor. Se impostato a vuoto, viene usato il `#editor.fontFamily#`.",
       "editor.inlayHints.fontSize": "Controlla la dimensione del carattere dei suggerimenti inlay nell'editor. Un valore predefinito del 90% di `#editor.fontSize#` è usato quando il valore configurato è inferiore a `5` o superiore alla dimensione del carattere dell'editor.",
+      "editor.inlayHints.padding": "Abilita il padding attorno ai suggerimenti dell'inlay nell'editor.",
       "editor.inlineSuggest.enabled": "Controlla se mostrare automaticamente i suggerimenti in linea nell'editor.",
       "editor.language.colorizedBracketPairs": "Definisce le coppie di parentesi che sono colorate dal loro livello di annidamento se la colorazione delle coppie di parentesi è abilitata.",
       "editor.lineHeight": "Controlla l'altezza della linea.\n - Usa 0 per calcolare automaticamente l'altezza della linea dalla dimensione del carattere.\n - I valori tra 0 e 8 saranno usati come moltiplicatore con la dimensione del carattere.\n - I valori maggiori o uguali a 8 saranno usati come valori effettivi.",
+      "editor.minimap.autohide": "Controlla se la minimappa viene nascosta automaticamente.",
+      "editor.multiCursorModifier": "Il modificatore da utilizzare per aggiungere più cursori con il mouse. I gesti del mouse Vai alla definizione e Apri collegamento si adatteranno in modo da non entrare in conflitto con il [modificatore multicursore](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Controlla se i suggerimenti devono essere visualizzati automaticamente durante la digitazione. Questo può essere controllato per la digitazione di commenti, stringhe e altro codice. Il suggerimento rapido può essere configurato per essere visualizzato come testo fantasma o con il widget Suggerimento. Si tenga presente anche l'impostazione '#editor.suggestOnTriggerCharacters#', che controlla se i suggerimenti vengono attivati da caratteri speciali.",
       "editor.quickSuggestions0": "I suggerimenti rapidi vengono visualizzati all'interno del widget Suggerimenti",
       "editor.quickSuggestions1": "I suggerimenti rapidi vengono visualizzati come testo fantasma",
       "editor.quickSuggestions2": "I suggerimenti rapidi sono disabilitati",
-      "editor.renderLineHighlightOnlyWhenFocus": "Controlla se l'editor deve rendere l'evidenziazione della linea corrente solo quando l'editor è focalizzato.",
-      "editor.renderWhitespace3": "Rende solo i caratteri di spazi bianchi finali.",
       "editor.scrollbar.horizontal": "Controlla la visibilità della barra di scorrimento orizzontale.",
       "editor.scrollbar.horizontal0": "La barra di scorrimento orizzontale sarà visibile solo quando necessario.",
       "editor.scrollbar.horizontal1": "La barra di scorrimento orizzontale sarà sempre visibile.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "La barra di scorrimento verticale sarà sempre visibile.",
       "editor.scrollbar.vertical2": "La barra di scorrimento verticale sarà sempre nascosta.",
       "editor.scrollbar.verticalScrollbarSize": "La larghezza della barra di scorrimento verticale.",
-      "editor.stickyTabStops": "Emula il comportamento di selezione dei caratteri di tabulazione quando si usano spazi per l'indentazione. La selezione si attaccherà ai fermi di tabulazione.",
-      "editor.suggest.localityBonus": "Controlla se l'ordinamento favorisce le parole che appaiono vicino al cursore.",
+      "editor.showFoldingControls1": "Non mostrare mai i comandi di ripiegamento e ridurre le dimensioni della grondaia.",
+      "editor.stickyScroll.enabled": "Mostra gli ambiti correnti annidati durante lo scorrimento nella parte superiore dell'editor.",
+      "editor.stickyScroll.maxLineCount": "Definisce il numero massimo di righe appiccicose da mostrare.",
+      "editor.suggest.matchOnWordStartOnly": "Se abilitato, il filtro IntelliSense richiede che il primo carattere corrisponda all'inizio di una parola, ad esempio `c` su `Console` o `WebContext` ma _non_ su `description`. Quando è disattivato, IntelliSense mostra più risultati, ma li ordina comunque in base alla qualità della corrispondenza.",
       "editor.suggest.preview": "Controlla se visualizzare in anteprima il risultato del suggerimento nell'editor.",
       "editor.suggest.showDeprecated": "Quando è abilitato, IntelliSense mostra suggerimenti `deprecati`.",
       "editor.unicodeHighlight.allowedCharacters": "Definisce i caratteri consentiti che non vengono evidenziati.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Controlla se i caratteri nelle stringhe devono essere soggetti all'evidenziazione unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Controlla se i caratteri che riservano solo spazio o non hanno alcuna larghezza sono evidenziati.",
       "editor.unicodeHighlight.nonBasicASCII": "Controlla se tutti i caratteri ASCII non di base sono evidenziati. Solo i caratteri tra U+0020 e U+007E, tab, line-feed e carriage-return sono considerati ASCII di base.",
-      "editor.wordBasedSuggestionsMode": "Controlla da quali documenti vengono calcolati i completamenti basati sulle parole.",
       "files.autoSave": "Controlla il [salvataggio automatico](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) degli editor che hanno modifiche non salvate.",
       "files.autoSave.afterDelay": "Un editor con modifiche viene salvato automaticamente dopo il `#files.autoSaveDelay#` configurato.",
       "files.autoSave.off": "Un editor con modifiche non viene mai salvato automaticamente.",
