--- a/packages/core/i18n/nls.pl.json
+++ b/packages/core/i18n/nls.pl.json
@@ -31,7 +31,6 @@
       "file": {
         "browse": "Przeglądaj stronę"
       },
-      "hideViewContainer": "Ukryj",
       "highlightModifiedTabs": "Określa, czy na zmodyfikowanych (brudnych) zakładkach edytora ma być wyświetlana górna ramka.",
       "installedLanguages": "Zainstalowane języki",
       "keybindingStatus": "{0} zostało naciśnięte, oczekiwanie na kolejne klawisze",
@@ -50,8 +49,6 @@
       "quitMessage": "Wszelkie niezapisane zmiany nie zostaną zapisane.",
       "quitTitle": "Czy na pewno chcesz rzucić palenie?",
       "resetWorkbenchLayout": "Resetuj układ stołu warsztatowego",
-      "sashDelay": "Kontroluje opóźnienie w milisekundach dla obszaru przeciągania pomiędzy widokami/edytorami.",
-      "sashSize": "Określa rozmiar w pikselach obszaru przeciągania pomiędzy widokami/edytorami. W razie potrzeby ustaw większą wartość.",
       "searchbox": {
         "close": "Zamknij (Ucieczka)",
         "next": "Następny (w dół)",
@@ -86,15 +83,17 @@
       "disassemblyTableColumnLabel": "instrukcje"
     },
     "editor": {
+      "diffEditor.diffAlgorithm.experimental": "Wykorzystuje eksperymentalny algorytm diffingu.",
+      "diffEditor.diffAlgorithm.smart": "Używa domyślnego algorytmu dyfuzji.",
       "diffEditor.maxFileSize": "Maksymalny rozmiar pliku w MB, dla którego mają być obliczane różnice. Wartość 0 oznacza brak limitu.",
+      "diffEditor.renderMarginRevertIcon": "Kiedy jest włączony, edytor dyfuzji pokazuje strzałki na swoim marginesie glifów, aby odwrócić zmiany.",
       "editor.accessibilityPageSize": "Określa liczbę linii w edytorze, które mogą być odczytywane jednocześnie przez czytnik ekranu. Po wykryciu czytnika ekranu automatycznie ustawiamy wartość domyślną na 500. Uwaga: ma to wpływ na wydajność w przypadku liczb większych niż domyślne.",
-      "editor.autoClosingDelete": "Określa, czy edytor ma usuwać przylegające cudzysłowy lub nawiasy zamykające podczas usuwania.",
-      "editor.autoClosingDelete1": "Usuń sąsiednie cudzysłowy lub nawiasy zamykające tylko wtedy, gdy zostały wstawione automatycznie.",
       "editor.bracketPairColorization.enabled": "Określa, czy kolorowanie par nawiasów jest włączone, czy nie. Użyj 'workbench.colorCustomizations', aby zmienić kolory podświetlenia nawiasów.",
       "editor.bracketPairColorization.independentColorPoolPerBracketType": "Kontroluje, czy każdy typ wspornika ma swoją własną, niezależną pulę kolorów.",
+      "editor.codeActionWidget.showHeaders": "Włączenie/wyłączenie pokazywania nagłówków grup w menu akcji kodu.",
       "editor.codeLensFontSize": "Kontroluje rozmiar czcionki w pikselach dla CodeLens. Gdy ustawione na `0`, używane jest 90% z `#editor.fontSize#`.",
-      "editor.find.autoFindInSelection0": "Nigdy nie włączaj funkcji Znajdź w zaznaczeniu automatycznie (ustawienie domyślne).",
-      "editor.find.autoFindInSelection1": "Zawsze automatycznie włączaj funkcję Znajdź w zaznaczeniu.",
+      "editor.dropIntoEditor.enabled": "Kontroluje czy możesz przeciągnąć i upuścić plik do edytora tekstu przytrzymując `shift` (zamiast otwierać plik w edytorze).",
+      "editor.experimental.pasteActions.enabled": "Włączanie/wyłączanie działających edycji z rozszerzeń na wklejanie.",
       "editor.find.seedSearchStringFromSelection0": "Nigdy nie należy wybierać łańcucha wyszukiwania nasion w edytorze.",
       "editor.find.seedSearchStringFromSelection1": "Zawsze wyszukuje ciąg znaków z zaznaczonego edytora, włączając w to słowo znajdujące się na pozycji kursora.",
       "editor.find.seedSearchStringFromSelection2": "Wyszukuje tylko ciąg znaków z edytora.",
@@ -121,14 +120,16 @@
       "editor.inlayHints.enabled3": "Podpowiedzi układania są wyłączone",
       "editor.inlayHints.fontFamily": "Kontroluje rodzinę czcionek podpowiedzi wkładek w edytorze. Jeśli jest ustawione na puste, używana jest `#editor.fontFamily#`.",
       "editor.inlayHints.fontSize": "Kontroluje rozmiar czcionki podpowiedzi wkładek w edytorze. Domyślnie 90% `#editor.fontSize#` jest używane, gdy skonfigurowana wartość jest mniejsza niż `5` lub większa niż rozmiar czcionki edytora.",
+      "editor.inlayHints.padding": "Włącza padding wokół podpowiedzi inlay w edytorze.",
       "editor.inlineSuggest.enabled": "Określa, czy w edytorze mają być automatycznie wyświetlane sugestie inline.",
       "editor.language.colorizedBracketPairs": "Określa pary nawiasów, które są kolorowane według poziomu ich zagnieżdżenia, jeśli kolorowanie par nawiasów jest włączone.",
       "editor.lineHeight": "Steruje wysokością wiersza.\n - Wartość 0 powoduje automatyczne obliczenie wysokości wiersza na podstawie rozmiaru czcionki.\n - Wartości z przedziału od 0 do 8 zostaną użyte jako mnożnik rozmiaru czcionki.\n - Wartości większe lub równe 8 będą używane jako wartości efektywne.",
+      "editor.minimap.autohide": "Kontroluje, czy minimapa jest automatycznie ukrywana.",
+      "editor.multiCursorModifier": "Modyfikator, który ma być użyty do dodania wielu kursorów za pomocą myszy. Gesty myszy Przejdź do definicji i Otwórz łącze dostosują się tak, by nie kolidowały z modyfikatorem [wielokursorowy modyfikator](https://code.visualstudio.com/docs/editor/codebasics#_multicursor-modifier).",
+      "editor.quickSuggestions": "Kontroluje czy sugestie powinny być automatycznie wyświetlane podczas pisania. Można to kontrolować w przypadku wpisywania komentarzy, ciągów znaków i innego kodu. Szybkie sugestie mogą być skonfigurowane tak, aby pokazywały się jako tekst widma lub z widżetem sugestii. Należy również pamiętać o ustawieniu '#editor.suggestOnTriggerCharacters#', które kontroluje czy sugestie są uruchamiane przez znaki specjalne.",
       "editor.quickSuggestions0": "Szybkie sugestie wyświetlane wewnątrz widżetu sugestii",
       "editor.quickSuggestions1": "Szybkie sugestie są wyświetlane jako tekst widmo",
       "editor.quickSuggestions2": "Szybkie sugestie są wyłączone",
-      "editor.renderLineHighlightOnlyWhenFocus": "Określa, czy edytor ma wyświetlać podświetlenie bieżącej linii tylko wtedy, gdy edytor jest skoncentrowany.",
-      "editor.renderWhitespace3": "Renderuj tylko końcowe znaki białych spacji.",
       "editor.scrollbar.horizontal": "Umożliwia sterowanie widocznością poziomego paska przewijania.",
       "editor.scrollbar.horizontal0": "Poziomy pasek przewijania będzie widoczny tylko wtedy, gdy będzie to konieczne.",
       "editor.scrollbar.horizontal1": "Poziomy pasek przewijania będzie zawsze widoczny.",
@@ -140,8 +141,10 @@
       "editor.scrollbar.vertical1": "Pionowy pasek przewijania będzie zawsze widoczny.",
       "editor.scrollbar.vertical2": "Pionowy pasek przewijania będzie zawsze ukryty.",
       "editor.scrollbar.verticalScrollbarSize": "Szerokość pionowego paska przewijania.",
-      "editor.stickyTabStops": "Naśladuje zachowanie zaznaczenia znaków tabulacji podczas używania spacji jako wcięcia. Zaznaczenie będzie się trzymać tabulatorów.",
-      "editor.suggest.localityBonus": "Określa, czy sortowanie ma faworyzować słowa, które pojawiają się w pobliżu kursora.",
+      "editor.showFoldingControls1": "Nigdy nie należy pokazywać elementów sterujących składaniem i zmniejszać wielkości rynny.",
+      "editor.stickyScroll.enabled": "Pokazuje zagnieżdżone bieżące zakresy podczas przewijania na górze edytora.",
+      "editor.stickyScroll.maxLineCount": "Określa maksymalną liczbę lepkich linii do pokazania.",
+      "editor.suggest.matchOnWordStartOnly": "Kiedy włączone filtrowanie IntelliSense wymaga, aby pierwszy znak pasował na początku słowa, np. `c` na `Console` lub `WebContext` ale _nie_ na `description`. Kiedy wyłączone IntelliSense pokaże więcej wyników, ale nadal sortuje je według jakości dopasowania.",
       "editor.suggest.preview": "Określa, czy podgląd wyniku sugestii ma być wyświetlany w edytorze.",
       "editor.suggest.showDeprecated": "Po włączeniu IntelliSense pokazuje sugestie `deprecated`.",
       "editor.unicodeHighlight.allowedCharacters": "Określa dozwolone znaki, które nie są podświetlane.",
@@ -151,7 +154,6 @@
       "editor.unicodeHighlight.includeStrings": "Określa, czy znaki w łańcuchach mają być także wyróżniane w trybie unicode.",
       "editor.unicodeHighlight.invisibleCharacters": "Określa, czy znaki, które mają tylko rezerwę miejsca lub nie mają żadnej szerokości, są podświetlane.",
       "editor.unicodeHighlight.nonBasicASCII": "Określa, czy wszystkie niepodstawowe znaki ASCII mają być podświetlane. Za podstawowe ASCII uważa się tylko znaki od U+0020 do U+007E, tabulatory, line-feed i carriage-return.",
-      "editor.wordBasedSuggestionsMode": "Określa, na podstawie jakich dokumentów obliczane są uzupełnienia oparte na słowach.",
       "files.autoSave": "Steruje funkcją [automatycznego zapisywania](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) edytorów, w których nie zapisano zmian.",
       "files.autoSave.afterDelay": "Edytor ze zmianami jest automatycznie zapisywany po upływie skonfigurowanego czasu `#files.autoSaveDelay#`.",
       "files.autoSave.off": "Edytor ze zmianami nigdy nie jest automatycznie zapisywany.",
